Add enhancements from local-development/src/kafka~