@@ -20,6 +20,7 @@ import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.message.FetchResponseData;
 import org.apache.kafka.common.metrics.Metrics;
+import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.serialization.StringSerializer;
 import org.apache.kafka.common.utils.BufferSupplier;
 import org.apache.kafka.common.utils.LogContext;
@@ -32,6 +33,7 @@ import org.junit.jupiter.api.Test;
 
 import java.time.Duration;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Properties;
 import java.util.Set;
 
@@ -177,7 +179,7 @@ public class FetchBufferTest {
         try (FetchBuffer fetchBuffer = new FetchBuffer(logContext)) {
             final Thread waitingThread = new Thread(() -> {
                 final Timer timer = time.timer(Duration.ofMinutes(1));
-                fetchBuffer.awaitWakeup(timer);
+                fetchBuffer.awaitNotEmpty(timer);
             });
             waitingThread.start();
             fetchBuffer.wakeup();
@@ -196,13 +198,14 @@ public class FetchBufferTest {
                 tp,
                 partitionData,
                 metricsAggregator,
-                0L);
+                0L,
+                ApiKeys.FETCH.latestVersion());
     }
 
     /**
      * This is a handy utility method for returning a set from a varargs array.
      */
     private static Set<TopicPartition> partitions(TopicPartition... partitions) {
-        return Set.of(partitions);
+        return new HashSet<>(Arrays.asList(partitions));
     }
 }
