@@ -16,12 +16,13 @@
  */
 package kafka.server.logger;
 
+import kafka.utils.Log4jController;
+
 import org.apache.kafka.clients.admin.AlterConfigOp;
 import org.apache.kafka.clients.admin.AlterConfigOp.OpType;
 import org.apache.kafka.common.errors.InvalidConfigurationException;
 import org.apache.kafka.common.errors.InvalidRequestException;
 import org.apache.kafka.common.message.IncrementalAlterConfigsRequestData.AlterableConfig;
-import org.apache.kafka.server.logger.LoggingController;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -30,7 +31,7 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -41,7 +42,7 @@ public class RuntimeLoggerManagerTest {
 
     @Test
     public void testValidateSetLogLevelConfig() {
-        MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
+        MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
             setName(LOG.getName()).
             setConfigOperation(OpType.SET.id()).
             setValue("TRACE")));
@@ -49,7 +50,7 @@ public class RuntimeLoggerManagerTest {
 
     @Test
     public void testValidateDeleteLogLevelConfig() {
-        MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
+        MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
             setName(LOG.getName()).
             setConfigOperation(OpType.DELETE.id()).
             setValue("")));
@@ -61,7 +62,7 @@ public class RuntimeLoggerManagerTest {
         OpType opType = AlterConfigOp.OpType.forId(id);
         assertEquals(opType + " operation is not allowed for the BROKER_LOGGER resource",
             Assertions.assertThrows(InvalidRequestException.class,
-                () -> MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
+                () -> MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
                     setName(LOG.getName()).
                     setConfigOperation(id).
                     setValue("TRACE")))).getMessage());
@@ -72,7 +73,7 @@ public class RuntimeLoggerManagerTest {
         assertEquals("Cannot set the log level of " + LOG.getName() + " to BOGUS as it is not " +
             "a supported log level. Valid log levels are DEBUG, ERROR, FATAL, INFO, TRACE, WARN",
             Assertions.assertThrows(InvalidConfigurationException.class,
-                () -> MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
+                () -> MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
                     setName(LOG.getName()).
                     setConfigOperation(OpType.SET.id()).
                     setValue("BOGUS")))).getMessage());
@@ -80,19 +81,19 @@ public class RuntimeLoggerManagerTest {
 
     @Test
     public void testValidateSetRootLogLevelConfig() {
-        MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
-                setName(LoggingController.ROOT_LOGGER).
+        MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
+                setName(Log4jController.ROOT_LOGGER()).
                 setConfigOperation(OpType.SET.id()).
                 setValue("TRACE")));
     }
 
     @Test
     public void testValidateRemoveRootLogLevelConfigNotAllowed() {
-        assertEquals("Removing the log level of the " + LoggingController.ROOT_LOGGER +
+        assertEquals("Removing the log level of the " + Log4jController.ROOT_LOGGER() +
             " logger is not allowed",
             Assertions.assertThrows(InvalidRequestException.class,
-                () -> MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
-                    setName(LoggingController.ROOT_LOGGER).
+                () -> MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
+                    setName(Log4jController.ROOT_LOGGER()).
                     setConfigOperation(OpType.DELETE.id()).
                     setValue("")))).getMessage());
     }
