@@ -17,6 +17,8 @@
 
 package org.apache.kafka.coordinator.group.classic;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Locale;
 import java.util.Set;
 
@@ -129,7 +131,7 @@ public enum ClassicGroupState {
     }
 
     private void addValidPreviousStates(ClassicGroupState... validPreviousStates) {
-        this.validPreviousStates = Set.of(validPreviousStates);
+        this.validPreviousStates = new HashSet<>(Arrays.asList(validPreviousStates));
     }
 
     /**
