@@ -30,7 +30,7 @@ import org.apache.kafka.coordinator.group.generated.ConsumerGroupCurrentMemberAs
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupPartitionMetadataValue;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupTargetAssignmentMemberValue;
 import org.apache.kafka.coordinator.group.generated.GroupMetadataValue;
-import org.apache.kafka.coordinator.group.generated.ShareGroupStatePartitionMetadataValue;
+import org.apache.kafka.coordinator.group.generated.ShareGroupPartitionMetadataValue;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
 
 import org.opentest4j.AssertionFailedError;
@@ -41,6 +41,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.AssertionFailureBuilder.assertionFailure;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -60,7 +61,7 @@ public class Assertions {
         ConsumerGroupPartitionMetadataValue.class, Assertions::assertConsumerGroupPartitionMetadataValue,
         GroupMetadataValue.class, Assertions::assertGroupMetadataValue,
         ConsumerGroupTargetAssignmentMemberValue.class, Assertions::assertConsumerGroupTargetAssignmentMemberValue,
-        ShareGroupStatePartitionMetadataValue.class, Assertions::assertShareGroupStatePartitionMetadataValue
+        ShareGroupPartitionMetadataValue.class, Assertions::assertShareGroupPartitionMetadataValue
     );
 
     public static void assertResponseEquals(
@@ -114,12 +115,12 @@ public class Assertions {
                     slice
                         .stream()
                         .sorted(Comparator.comparing(Object::toString))
-                        .toList(),
+                        .collect(Collectors.toList()),
                     actualRecords
                         .subList(j, j + slice.size())
                         .stream()
                         .sorted(Comparator.comparing(Object::toString))
-                        .toList()
+                        .collect(Collectors.toList())
                 );
 
                 j += slice.size();
@@ -139,7 +140,7 @@ public class Assertions {
         CoordinatorRecord actual
     ) {
         try {
-            assertApiMessage(expected.key(), actual.key());
+            assertApiMessageAndVersionEquals(expected.key(), actual.key());
             assertApiMessageAndVersionEquals(expected.value(), actual.value());
         } catch (AssertionFailedError e) {
             assertionFailure()
@@ -187,18 +188,6 @@ public class Assertions {
         normalize.accept(actual);
 
         assertEquals(expected, actual);
-    }
-
-    private static void assertApiMessage(
-        ApiMessage expected,
-        ApiMessage actual
-    ) {
-        if (expected == actual) return;
-        assertNotNull(expected);
-        assertNotNull(actual);
-        BiConsumer<ApiMessage, ApiMessage> asserter = API_MESSAGE_COMPARATORS
-            .getOrDefault(expected.getClass(), API_MESSAGE_DEFAULT_COMPARATOR);
-        asserter.accept(expected, actual);
     }
 
     private static void assertApiMessageAndVersionEquals(
@@ -262,25 +251,21 @@ public class Assertions {
         assertEquals(expected, actual);
     }
 
-    private static void assertShareGroupStatePartitionMetadataValue(
+    private static void assertShareGroupPartitionMetadataValue(
         ApiMessage exp,
         ApiMessage act
     ) {
-        ShareGroupStatePartitionMetadataValue expected = (ShareGroupStatePartitionMetadataValue) exp.duplicate();
-        ShareGroupStatePartitionMetadataValue actual = (ShareGroupStatePartitionMetadataValue) act.duplicate();
+        // The order of the racks stored in the PartitionMetadata of the ShareGroupPartitionMetadataValue
+        // is not always guaranteed. Therefore, we need a special comparator.
+        ShareGroupPartitionMetadataValue expected = (ShareGroupPartitionMetadataValue) exp.duplicate();
+        ShareGroupPartitionMetadataValue actual = (ShareGroupPartitionMetadataValue) act.duplicate();
 
-        Consumer<ShareGroupStatePartitionMetadataValue> normalize = message -> {
-            message.initializedTopics().sort(Comparator.comparing(ShareGroupStatePartitionMetadataValue.TopicPartitionsInfo::topicId));
-            message.initializedTopics().forEach(topic ->
-                topic.partitions().sort(Comparator.naturalOrder())
-            );
-
-            message.initializingTopics().sort(Comparator.comparing(ShareGroupStatePartitionMetadataValue.TopicPartitionsInfo::topicId));
-            message.initializingTopics().forEach(topic ->
-                topic.partitions().sort(Comparator.naturalOrder())
-            );
-
-            message.deletingTopics().sort(Comparator.comparing(ShareGroupStatePartitionMetadataValue.TopicInfo::topicId));
+        Consumer<ShareGroupPartitionMetadataValue> normalize = message -> {
+            message.topics().sort(Comparator.comparing(ShareGroupPartitionMetadataValue.TopicMetadata::topicId));
+            message.topics().forEach(topic -> {
+                topic.partitionMetadata().sort(Comparator.comparing(ShareGroupPartitionMetadataValue.PartitionMetadata::partition));
+                topic.partitionMetadata().forEach(partition -> partition.racks().sort(String::compareTo));
+            });
         };
 
         normalize.accept(expected);
