@@ -27,6 +27,7 @@ import org.apache.kafka.metadata.placement.UsableBroker;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Optional;
@@ -120,7 +121,7 @@ public class BrokerHeartbeatManagerTest {
     @Test
     public void testUsableBrokerIterator() {
         BrokerHeartbeatManager manager = newBrokerHeartbeatManager();
-        assertEquals(Set.of(), usableBrokersToSet(manager));
+        assertEquals(Collections.emptySet(), usableBrokersToSet(manager));
         for (int brokerId = 0; brokerId < 5; brokerId++) {
             manager.register(brokerId, true);
         }
@@ -151,7 +152,7 @@ public class BrokerHeartbeatManagerTest {
     @Test
     public void testControlledShutdownOffsetIsOnlyUpdatedOnce() {
         BrokerHeartbeatManager manager = newBrokerHeartbeatManager();
-        assertEquals(Set.of(), usableBrokersToSet(manager));
+        assertEquals(Collections.emptySet(), usableBrokersToSet(manager));
         for (int brokerId = 0; brokerId < 5; brokerId++) {
             manager.register(brokerId, true);
         }
