@@ -19,14 +19,17 @@ package org.apache.kafka.image;
 
 import org.apache.kafka.common.config.ConfigResource;
 import org.apache.kafka.common.metadata.ConfigRecord;
+import org.apache.kafka.image.writer.ImageWriterOptions;
 import org.apache.kafka.image.writer.RecordListWriter;
 import org.apache.kafka.metadata.RecordTestUtils;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
+import org.apache.kafka.server.common.MetadataVersion;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -84,10 +87,10 @@ public class ConfigurationsImageTest {
         RecordTestUtils.replayAll(DELTA1, DELTA1_RECORDS);
 
         Map<ConfigResource, ConfigurationImage> map2 = new HashMap<>();
-        Map<String, String> broker1Map2 = Map.of("barfoo", "bazfoo");
+        Map<String, String> broker1Map2 = Collections.singletonMap("barfoo", "bazfoo");
         map2.put(new ConfigResource(BROKER, "1"),
             new ConfigurationImage(new ConfigResource(BROKER, "1"), broker1Map2));
-        Map<String, String> broker2Map = Map.of("foo", "bar");
+        Map<String, String> broker2Map = Collections.singletonMap("foo", "bar");
         map2.put(new ConfigResource(BROKER, "2"), new ConfigurationImage(new ConfigResource(BROKER, "2"), broker2Map));
         IMAGE2 = new ConfigurationsImage(map2);
     }
@@ -134,7 +137,7 @@ public class ConfigurationsImageTest {
 
     private static List<ApiMessageAndVersion> getImageRecords(ConfigurationsImage image) {
         RecordListWriter writer = new RecordListWriter();
-        image.write(writer);
+        image.write(writer, new ImageWriterOptions.Builder(MetadataVersion.latestProduction()).build());
         return writer.records();
     }
 }
