@@ -25,6 +25,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
+import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.IntStream;
@@ -50,6 +51,7 @@ public class CandidateStateTest {
             epoch,
             voters,
             Optional.empty(),
+            1,
             electionTimeoutMs,
             logContext
         );
@@ -61,7 +63,7 @@ public class CandidateStateTest {
         CandidateState state = newCandidateState(voterSetWithLocal(IntStream.empty(), withDirectoryId));
         assertTrue(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
-        assertEquals(Set.of(), state.epochElection().unrecordedVoters());
+        assertEquals(Collections.emptySet(), state.epochElection().unrecordedVoters());
     }
 
     @ParameterizedTest
@@ -73,7 +75,7 @@ public class CandidateStateTest {
         );
         assertFalse(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
-        assertEquals(Set.of(otherNode), state.epochElection().unrecordedVoters());
+        assertEquals(Collections.singleton(otherNode), state.epochElection().unrecordedVoters());
         assertTrue(state.recordRejectedVote(otherNode.id()));
         assertFalse(state.epochElection().isVoteGranted());
         assertTrue(state.epochElection().isVoteRejected());
@@ -88,9 +90,9 @@ public class CandidateStateTest {
         );
         assertFalse(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
-        assertEquals(Set.of(otherNode), state.epochElection().unrecordedVoters());
+        assertEquals(Collections.singleton(otherNode), state.epochElection().unrecordedVoters());
         assertTrue(state.recordGrantedVote(otherNode.id()));
-        assertEquals(Set.of(), state.epochElection().unrecordedVoters());
+        assertEquals(Collections.emptySet(), state.epochElection().unrecordedVoters());
         assertFalse(state.epochElection().isVoteRejected());
         assertTrue(state.epochElection().isVoteGranted());
     }
@@ -107,11 +109,11 @@ public class CandidateStateTest {
         assertFalse(state.epochElection().isVoteRejected());
         assertEquals(Set.of(node1, node2), state.epochElection().unrecordedVoters());
         assertTrue(state.recordGrantedVote(node1.id()));
-        assertEquals(Set.of(node2), state.epochElection().unrecordedVoters());
+        assertEquals(Collections.singleton(node2), state.epochElection().unrecordedVoters());
         assertTrue(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
         assertTrue(state.recordRejectedVote(node2.id()));
-        assertEquals(Set.of(), state.epochElection().unrecordedVoters());
+        assertEquals(Collections.emptySet(), state.epochElection().unrecordedVoters());
         assertTrue(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
     }
@@ -128,11 +130,11 @@ public class CandidateStateTest {
         assertFalse(state.epochElection().isVoteRejected());
         assertEquals(Set.of(node1, node2), state.epochElection().unrecordedVoters());
         assertTrue(state.recordRejectedVote(node1.id()));
-        assertEquals(Set.of(node2), state.epochElection().unrecordedVoters());
+        assertEquals(Collections.singleton(node2), state.epochElection().unrecordedVoters());
         assertFalse(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
         assertTrue(state.recordRejectedVote(node2.id()));
-        assertEquals(Set.of(), state.epochElection().unrecordedVoters());
+        assertEquals(Collections.emptySet(), state.epochElection().unrecordedVoters());
         assertFalse(state.epochElection().isVoteGranted());
         assertTrue(state.epochElection().isVoteRejected());
     }
