@@ -17,8 +17,10 @@
 package org.apache.kafka.raft;
 
 import org.apache.kafka.common.Uuid;
+import org.apache.kafka.common.errors.ClusterAuthorizationException;
 import org.apache.kafka.common.errors.RecordBatchTooLargeException;
 import org.apache.kafka.common.memory.MemoryPool;
+import org.apache.kafka.common.message.BeginQuorumEpochResponseData;
 import org.apache.kafka.common.message.DescribeQuorumResponseData;
 import org.apache.kafka.common.message.DescribeQuorumResponseData.ReplicaState;
 import org.apache.kafka.common.message.EndQuorumEpochResponseData;
@@ -52,6 +54,8 @@ import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
@@ -61,8 +65,10 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeoutException;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static java.util.Collections.singletonList;
 import static org.apache.kafka.raft.RaftClientTestContext.Builder.DEFAULT_ELECTION_TIMEOUT_MS;
 import static org.apache.kafka.raft.RaftClientTestContext.RaftProtocol.KIP_853_PROTOCOL;
 import static org.apache.kafka.test.TestUtils.assertFutureThrows;
@@ -74,8 +80,8 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-@SuppressWarnings("ClassFanOutComplexity")
-class KafkaRaftClientTest {
+@SuppressWarnings({"ClassDataAbstractionCoupling", "ClassFanOutComplexity"})
+public class KafkaRaftClientTest {
     @Test
     public void testNodeDirectoryId() {
         int localId = randomReplicaId();
@@ -89,7 +95,7 @@ class KafkaRaftClientTest {
     @ValueSource(booleans = { true, false })
     public void testInitializeSingleMemberQuorum(boolean withKip853Rpc) throws IOException {
         int localId = randomReplicaId();
-        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Set.of(localId))
+        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Collections.singleton(localId))
             .withKip853Rpc(withKip853Rpc)
             .build();
         context.assertElectedLeader(1, localId);
@@ -102,7 +108,7 @@ class KafkaRaftClientTest {
         // Start off as leader. We should still bump the epoch after initialization
         int localId = randomReplicaId();
         int initialEpoch = 2;
-        Set<Integer> voters = Set.of(localId);
+        Set<Integer> voters = Collections.singleton(localId);
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withKip853Rpc(withKip853Rpc)
             .withElectedLeader(initialEpoch, localId)
@@ -353,7 +359,7 @@ class KafkaRaftClientTest {
         assertEquals(0L, context.log.endOffset().offset());
         context.assertElectedLeader(epoch, localId);
         context.client.poll();
-        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch, List.of("a", "b")));
+        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch, Arrays.asList("a", "b")));
 
         context.pollUntilRequest();
         RaftRequest.Outbound request = context.assertSentEndQuorumEpochRequest(epoch, remoteId);
@@ -386,7 +392,7 @@ class KafkaRaftClientTest {
             .withKip853Rpc(withKip853Rpc)
             .build();
 
-        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch, List.of("a", "b")));
+        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch, Arrays.asList("a", "b")));
     }
 
     @ParameterizedTest
@@ -412,7 +418,7 @@ class KafkaRaftClientTest {
         assertEquals(OptionalInt.of(localId), context.currentLeader());
         int epoch = context.currentEpoch();
 
-        assertThrows(BufferAllocationException.class, () -> context.client.prepareAppend(epoch, List.of("a")));
+        assertThrows(BufferAllocationException.class, () -> context.client.prepareAppend(epoch, singletonList("a")));
         Mockito.verify(memoryPool).release(buffer);
     }
 
@@ -432,9 +438,9 @@ class KafkaRaftClientTest {
         int epoch = context.currentEpoch();
 
         // Throws IllegalArgumentException on higher epoch
-        assertThrows(IllegalArgumentException.class, () -> context.client.prepareAppend(epoch + 1, List.of("a")));
+        assertThrows(IllegalArgumentException.class, () -> context.client.prepareAppend(epoch + 1, singletonList("a")));
         // Throws NotLeaderException on smaller epoch
-        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch - 1, List.of("a")));
+        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch - 1, singletonList("a")));
     }
 
     @ParameterizedTest
@@ -497,7 +503,7 @@ class KafkaRaftClientTest {
             context.endEpochResponse(epoch, OptionalInt.of(localId))
         );
         context.client.poll();
-        assertEquals(List.of(), context.channel.drainSendQueue());
+        assertEquals(Collections.emptyList(), context.channel.drainSendQueue());
 
         // Now sleep for the request timeout and verify that we get only one
         // retried request from the voter that hasn't responded yet.
@@ -531,7 +537,7 @@ class KafkaRaftClientTest {
 
         // append some record, but the fetch in purgatory will still fail
         context.log.appendAsLeader(
-            context.buildBatch(context.log.endOffset().offset(), epoch, List.of("raft")),
+            context.buildBatch(context.log.endOffset().offset(), epoch, singletonList("raft")),
             epoch
         );
 
@@ -818,7 +824,7 @@ class KafkaRaftClientTest {
 
         RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
         assertTrue(voters.contains(fetchRequest.destination().id()));
-        context.assertFetchRequestData(fetchRequest, 0, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest, 0, 0L, 0);
 
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -863,7 +869,7 @@ class KafkaRaftClientTest {
 
         context.assertUnknownLeaderAndNoVotedCandidate(0);
         context.pollUntilRequest();
-        RaftRequest.Outbound request = context.assertSentFetchRequest(0, 0L, 0, OptionalLong.empty());
+        RaftRequest.Outbound request = context.assertSentFetchRequest(0, 0L, 0);
         assertTrue(context.client.quorum().isUnattached());
         assertTrue(context.client.quorum().isVoter());
 
@@ -914,10 +920,10 @@ class KafkaRaftClientTest {
         RecordBatch batch = records.batches().iterator().next();
         assertTrue(batch.isControlBatch());
 
-        Record expectedRecord = batch.iterator().next();
-        assertEquals(electionTimestamp, expectedRecord.timestamp());
-        RaftClientTestContext.verifyLeaderChangeMessage(localId, List.of(localId, otherNodeId),
-                List.of(otherNodeId, localId), expectedRecord.key(), expectedRecord.value());
+        Record record = batch.iterator().next();
+        assertEquals(electionTimestamp, record.timestamp());
+        RaftClientTestContext.verifyLeaderChangeMessage(localId, Arrays.asList(localId, otherNodeId),
+            Arrays.asList(otherNodeId, localId), record.key(), record.value());
     }
 
     @ParameterizedTest
@@ -963,10 +969,10 @@ class KafkaRaftClientTest {
         RecordBatch batch = records.batches().iterator().next();
         assertTrue(batch.isControlBatch());
 
-        Record expectedRecord = batch.iterator().next();
-        assertEquals(electionTimestamp, expectedRecord.timestamp());
-        RaftClientTestContext.verifyLeaderChangeMessage(localId, List.of(localId, firstNodeId, secondNodeId),
-                List.of(voterId, localId), expectedRecord.key(), expectedRecord.value());
+        Record record = batch.iterator().next();
+        assertEquals(electionTimestamp, record.timestamp());
+        RaftClientTestContext.verifyLeaderChangeMessage(localId, Arrays.asList(localId, firstNodeId, secondNodeId),
+            Arrays.asList(voterId, localId), record.key(), record.value());
     }
 
     @ParameterizedTest
@@ -1120,7 +1126,7 @@ class KafkaRaftClientTest {
             context.endEpochRequest(
                 epoch - 2,
                 otherNodeId,
-                List.of(context.localReplicaKey())
+                Collections.singletonList(context.localReplicaKey())
             )
         );
 
@@ -1132,8 +1138,13 @@ class KafkaRaftClientTest {
         context.client.poll();
         context.assertVotedCandidate(epoch, localId);
 
-        // After election timeout, replica will become prospective again
+        // Enter the backoff period
         context.time.sleep(1);
+        context.client.poll();
+        context.assertVotedCandidate(epoch, localId);
+
+        // After backoff, replica will become prospective again
+        context.time.sleep(context.electionBackoffMaxMs);
         context.client.poll();
         assertTrue(context.client.quorum().isProspective());
     }
@@ -1155,7 +1166,7 @@ class KafkaRaftClientTest {
 
         // One of the voters may have sent EndQuorumEpoch from an earlier epoch
         context.deliverRequest(
-            context.endEpochRequest(epoch - 2, voter2, List.of(context.localReplicaKey(), voter3))
+            context.endEpochRequest(epoch - 2, voter2, Arrays.asList(context.localReplicaKey(), voter3))
         );
 
         context.pollUntilResponse();
@@ -1187,7 +1198,7 @@ class KafkaRaftClientTest {
             context.endEpochRequest(
                 epoch,
                 voter2,
-                List.of(context.localReplicaKey(), voter3)
+                Arrays.asList(context.localReplicaKey(), voter3)
             )
         );
 
@@ -1222,7 +1233,7 @@ class KafkaRaftClientTest {
         assertEquals(OptionalInt.of(localId), context.currentLeader());
         int epoch = context.currentEpoch();
 
-        assertEquals(1L, context.client.prepareAppend(epoch, List.of("a")));
+        assertEquals(1L, context.client.prepareAppend(epoch, singletonList("a")));
         context.client.schedulePreparedAppend();
         context.deliverRequest(context.beginEpochRequest(epoch + 1, otherNodeId));
         context.pollUntilResponse();
@@ -1255,7 +1266,7 @@ class KafkaRaftClientTest {
         assertEquals(OptionalInt.of(localId), context.currentLeader());
         int epoch = context.currentEpoch();
 
-        assertEquals(1L, context.client.prepareAppend(epoch, List.of("a")));
+        assertEquals(1L, context.client.prepareAppend(epoch, singletonList("a")));
         context.client.schedulePreparedAppend();
         context.deliverRequest(
             context.voteRequest(epoch + 1, otherNodeKey, epoch, context.log.endOffset().offset())
@@ -1289,7 +1300,7 @@ class KafkaRaftClientTest {
         assertEquals(OptionalInt.of(localId), context.currentLeader());
         int epoch = context.currentEpoch();
 
-        assertEquals(1L, context.client.prepareAppend(epoch, List.of("a")));
+        assertEquals(1L, context.client.prepareAppend(epoch, singletonList("a")));
         context.client.schedulePreparedAppend();
         context.deliverRequest(context.voteRequest(epoch + 1, otherNodeKey, epoch, 0L));
         context.pollUntilResponse();
@@ -1319,7 +1330,7 @@ class KafkaRaftClientTest {
         assertEquals(1L, context.log.endOffset().offset());
 
         int epoch = context.currentEpoch();
-        assertEquals(1L, context.client.prepareAppend(epoch, List.of("a")));
+        assertEquals(1L, context.client.prepareAppend(epoch, singletonList("a")));
         context.client.schedulePreparedAppend();
         assertTrue(context.messageQueue.wakeupRequested());
 
@@ -1355,7 +1366,7 @@ class KafkaRaftClientTest {
         assertEquals(1L, context.log.endOffset().offset());
 
         int epoch = context.currentEpoch();
-        assertEquals(1L, context.client.prepareAppend(epoch, List.of("a")));
+        assertEquals(1L, context.client.prepareAppend(epoch, singletonList("a")));
         context.client.schedulePreparedAppend();
         assertTrue(context.messageQueue.wakeupRequested());
 
@@ -1364,7 +1375,7 @@ class KafkaRaftClientTest {
         assertEquals(OptionalLong.of(lingerMs), context.messageQueue.lastPollTimeoutMs());
 
         context.time.sleep(lingerMs);
-        assertEquals(2L, context.client.prepareAppend(epoch, List.of("b")));
+        assertEquals(2L, context.client.prepareAppend(epoch, singletonList("b")));
         context.client.schedulePreparedAppend();
         assertTrue(context.messageQueue.wakeupRequested());
 
@@ -1389,7 +1400,7 @@ class KafkaRaftClientTest {
             context.endEpochRequest(
                 leaderEpoch,
                 oldLeaderId,
-                List.of(context.localReplicaKey())
+                Collections.singletonList(context.localReplicaKey())
             )
         );
 
@@ -1419,7 +1430,7 @@ class KafkaRaftClientTest {
             context.endEpochRequest(
                 leaderEpoch,
                 oldLeaderKey.id(),
-                List.of(preferredNextLeader, context.localReplicaKey())
+                Arrays.asList(preferredNextLeader, context.localReplicaKey())
             )
         );
 
@@ -1430,7 +1441,7 @@ class KafkaRaftClientTest {
         context.time.sleep(1);
 
         context.client.poll();
-        context.assertSentFetchRequest(leaderEpoch, 0, 0, OptionalLong.empty());
+        context.assertSentFetchRequest(leaderEpoch, 0, 0);
 
         context.time.sleep(context.electionBackoffMaxMs);
         context.client.poll();
@@ -1696,7 +1707,7 @@ class KafkaRaftClientTest {
         context.assertSentFetchPartitionResponse(Errors.NONE, epoch, OptionalInt.of(localId));
         assertEquals(OptionalLong.of(1L), context.client.highWatermark());
 
-        List<String> records = List.of("a", "b", "c");
+        List<String> records = Arrays.asList("a", "b", "c");
         long offset = context.client.prepareAppend(epoch, records);
         context.client.schedulePreparedAppend();
         context.client.poll();
@@ -1725,9 +1736,9 @@ class KafkaRaftClientTest {
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withUnknownLeader(5)
             .withKip853Rpc(withKip853Rpc)
-            .appendToLog(1, List.of("a", "b", "c"))
-            .appendToLog(3, List.of("d", "e", "f"))
-            .appendToLog(5, List.of("g", "h", "i"))
+            .appendToLog(1, Arrays.asList("a", "b", "c"))
+            .appendToLog(3, Arrays.asList("d", "e", "f"))
+            .appendToLog(5, Arrays.asList("g", "h", "i"))
             .build();
 
         // Start off as the leader
@@ -1770,15 +1781,15 @@ class KafkaRaftClientTest {
 
     @ParameterizedTest
     @ValueSource(booleans = { true, false })
-    public void testCandidateWaitsRestOfElectionTimeoutAfterElectionLoss(boolean withKip853Rpc) throws Exception {
+    public void testCandidateBackoffElection(boolean withKip853Rpc) throws Exception {
         int localId = randomReplicaId();
         int otherNodeId = localId + 1;
         int epoch = 1;
-        int jitter = 85;
+        int exponentialFactor = 85;  // set it large enough so that replica will bound on jitter
         Set<Integer> voters = Set.of(localId, otherNodeId);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .updateRandom(r -> r.mockNextInt(jitter))
+            .updateRandom(r -> r.mockNextInt(exponentialFactor))
             .withKip853Rpc(withKip853Rpc)
             .build();
 
@@ -1788,11 +1799,12 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         context.assertVotedCandidate(epoch, localId);
         CandidateState candidate = context.client.quorum().candidateStateOrThrow();
+        assertEquals(1, candidate.retries());
         assertEquals(
-            context.electionTimeoutMs() + jitter,
+            context.electionTimeoutMs() + exponentialFactor,
             candidate.remainingElectionTimeMs(context.time.milliseconds())
         );
-        assertFalse(candidate.epochElection().isVoteRejected());
+        assertFalse(candidate.isBackingOff());
 
         // Quorum size is two. If the other member rejects, then the local replica will lose the election.
         RaftRequest.Outbound request = context.assertSentVoteRequest(epoch, 0, 0L, 1);
@@ -1803,28 +1815,44 @@ class KafkaRaftClientTest {
         );
 
         context.client.poll();
-        assertTrue(candidate.epochElection().isVoteRejected());
+        assertTrue(candidate.isBackingOff());
+        assertEquals(
+            context.electionBackoffMaxMs,
+            candidate.remainingBackoffMs(context.time.milliseconds())
+        );
 
         // Election is lost, but local replica should still remember that it has voted
         context.assertVotedCandidate(epoch, localId);
 
-        // Even though candidacy was rejected, local replica will backoff for remaining election timeout
+        // Even though candidacy was rejected, local replica will backoff for jitter period
         // before transitioning to prospective and starting a new election.
-        context.time.sleep(context.electionTimeoutMs() + jitter - 1);
+        context.time.sleep(context.electionBackoffMaxMs - 1);
         context.client.poll();
         context.assertVotedCandidate(epoch, localId);
 
-        // After election timeout expires, become a prospective again
+        // After jitter expires, become a prospective again
         context.time.sleep(1);
         context.client.poll();
         assertTrue(context.client.quorum().isProspective());
         ProspectiveState prospective = context.client.quorum().prospectiveStateOrThrow();
+        assertEquals(2, prospective.retries());
         context.pollUntilRequest();
-        context.assertSentPreVoteRequest(epoch, 0, 0L, 1);
+        request = context.assertSentPreVoteRequest(epoch, 0, 0L, 1);
         assertEquals(
-            context.electionTimeoutMs() + jitter,
+            context.electionTimeoutMs() + exponentialFactor,
             prospective.remainingElectionTimeMs(context.time.milliseconds())
         );
+
+        // After becoming candidate again, retries should be 2
+        context.deliverResponse(
+            request.correlationId(),
+            request.destination(),
+            context.voteResponse(true, OptionalInt.empty(), 1)
+        );
+        context.client.poll();
+        context.assertVotedCandidate(epoch + 1, localId);
+        candidate = context.client.quorum().candidateStateOrThrow();
+        assertEquals(2, candidate.retries());
     }
 
     @ParameterizedTest
@@ -1848,11 +1876,12 @@ class KafkaRaftClientTest {
         context.assertVotedCandidate(epoch, localId);
         context.assertSentVoteRequest(epoch, 0, 0L, 1);
         CandidateState candidate = context.client.quorum().candidateStateOrThrow();
+        assertEquals(1, candidate.retries());
         assertEquals(
             context.electionTimeoutMs() + jitter,
             candidate.remainingElectionTimeMs(context.time.milliseconds())
         );
-        assertFalse(candidate.epochElection().isVoteRejected());
+        assertFalse(candidate.isBackingOff());
 
         // If election times out, replica transition to prospective without any additional backoff
         context.time.sleep(candidate.remainingElectionTimeMs(context.time.milliseconds()));
@@ -1860,6 +1889,7 @@ class KafkaRaftClientTest {
         assertTrue(context.client.quorum().isProspective());
 
         ProspectiveState prospective = context.client.quorum().prospectiveStateOrThrow();
+        assertEquals(2, prospective.retries());
         context.pollUntilRequest();
         context.assertSentPreVoteRequest(epoch, 0, 0L, 1);
         assertEquals(
@@ -1885,7 +1915,7 @@ class KafkaRaftClientTest {
 
         context.pollUntilRequest();
 
-        context.assertSentFetchRequest(epoch, 0L, 0, OptionalLong.empty());
+        context.assertSentFetchRequest(epoch, 0L, 0);
     }
 
     @ParameterizedTest
@@ -1899,14 +1929,14 @@ class KafkaRaftClientTest {
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withElectedLeader(epoch, otherNodeId)
-            .appendToLog(lastEpoch, List.of("foo"))
+            .appendToLog(lastEpoch, singletonList("foo"))
             .withKip853Rpc(withKip853Rpc)
             .build();
 
         context.assertElectedLeader(epoch, otherNodeId);
 
         context.pollUntilRequest();
-        context.assertSentFetchRequest(epoch, 1L, lastEpoch, OptionalLong.empty());
+        context.assertSentFetchRequest(epoch, 1L, lastEpoch);
     }
 
     @ParameterizedTest
@@ -1920,13 +1950,13 @@ class KafkaRaftClientTest {
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withElectedLeader(epoch, otherNodeId)
-            .appendToLog(lastEpoch, List.of("foo"))
+            .appendToLog(lastEpoch, singletonList("foo"))
             .withKip853Rpc(withKip853Rpc)
             .build();
         context.assertElectedLeader(epoch, otherNodeId);
 
         context.pollUntilRequest();
-        context.assertSentFetchRequest(epoch, 1L, lastEpoch, OptionalLong.empty());
+        context.assertSentFetchRequest(epoch, 1L, lastEpoch);
 
         context.time.sleep(context.fetchTimeoutMs);
         context.client.poll();
@@ -1946,13 +1976,13 @@ class KafkaRaftClientTest {
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withElectedLeader(epoch, otherNodeId)
-            .appendToLog(lastEpoch, List.of("foo"))
+            .appendToLog(lastEpoch, singletonList("foo"))
             .withKip853Rpc(withKip853Rpc)
             .build();
         context.assertElectedLeader(epoch, otherNodeId);
 
         context.pollUntilRequest();
-        context.assertSentFetchRequest(epoch, 1L, lastEpoch, OptionalLong.empty());
+        context.assertSentFetchRequest(epoch, 1L, lastEpoch);
 
         context.time.sleep(context.fetchTimeoutMs);
         context.pollUntilRequest();
@@ -1979,13 +2009,13 @@ class KafkaRaftClientTest {
             .build();
 
         context.pollUntilRequest();
-        context.assertSentFetchRequest(epoch, 0L, 0, OptionalLong.empty());
+        context.assertSentFetchRequest(epoch, 0L, 0);
         assertTrue(context.client.quorum().isUnattached());
 
         context.time.sleep(context.electionTimeoutMs() * 2);
         context.pollUntilRequest();
         assertTrue(context.client.quorum().isUnattached());
-        context.assertSentFetchRequest(epoch, 0L, 0, OptionalLong.empty());
+        context.assertSentFetchRequest(epoch, 0L, 0);
         // confirm no vote request was sent
         assertEquals(0, context.channel.drainSendQueue().size());
 
@@ -1998,7 +2028,7 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         // observer cannot transition to prospective though
         assertTrue(context.client.quorum().isUnattached());
-        context.assertSentFetchRequest(epoch + 1, 0L, 0, OptionalLong.empty());
+        context.assertSentFetchRequest(epoch + 1, 0L, 0);
         assertEquals(0, context.channel.drainSendQueue().size());
     }
 
@@ -2017,7 +2047,7 @@ class KafkaRaftClientTest {
             .build();
 
         context.pollUntilRequest();
-        RaftRequest.Outbound request = context.assertSentFetchRequest(epoch, 0L, 0, OptionalLong.empty());
+        RaftRequest.Outbound request = context.assertSentFetchRequest(epoch, 0L, 0);
         assertTrue(context.client.quorum().isUnattached());
         assertTrue(context.client.quorum().isVoter());
 
@@ -2049,7 +2079,7 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
         assertTrue(voters.contains(fetchRequest.destination().id()));
-        context.assertFetchRequestData(fetchRequest, 0, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest, 0, 0L, 0);
 
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -2071,7 +2101,7 @@ class KafkaRaftClientTest {
         List<InetSocketAddress> bootstrapServers = voters
             .stream()
             .map(RaftClientTestContext::mockAddress)
-            .toList();
+            .collect(Collectors.toList());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withBootstrapServers(Optional.of(bootstrapServers))
@@ -2081,7 +2111,7 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
         assertTrue(context.bootstrapIds.contains(fetchRequest.destination().id()));
-        context.assertFetchRequestData(fetchRequest, 0, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest, 0, 0L, 0);
 
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -2095,7 +2125,7 @@ class KafkaRaftClientTest {
 
         fetchRequest = context.assertSentFetchRequest();
         assertTrue(context.bootstrapIds.contains(fetchRequest.destination().id()));
-        context.assertFetchRequestData(fetchRequest, 0, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest, 0, 0L, 0);
 
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -2109,28 +2139,26 @@ class KafkaRaftClientTest {
 
     @ParameterizedTest
     @ValueSource(booleans = { true, false })
-    public void testObserverUnattachedSendFetchToBootstrapServers(boolean withKip853Rpc) throws Exception {
+    public void testObserverSendDiscoveryFetchAfterFetchTimeout(boolean withKip853Rpc) throws Exception {
         int localId = randomReplicaId();
         int leaderId = localId + 1;
         int otherNodeId = localId + 2;
-        int epoch = 0;
+        int epoch = 5;
         Set<Integer> voters = Set.of(leaderId, otherNodeId);
         List<InetSocketAddress> bootstrapServers = voters
             .stream()
             .map(RaftClientTestContext::mockAddress)
-            .toList();
+            .collect(Collectors.toList());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withBootstrapServers(Optional.of(bootstrapServers))
             .withKip853Rpc(withKip853Rpc)
             .build();
 
-        // unattached observer will send fetches to bootstrap servers to discover leader
         context.pollUntilRequest();
         RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
         assertTrue(context.bootstrapIds.contains(fetchRequest.destination().id()));
-        context.assertFetchRequestData(fetchRequest, epoch, 0L, 0, context.client.highWatermark());
-        context.assertUnknownLeaderAndNoVotedCandidate(epoch);
+        context.assertFetchRequestData(fetchRequest, 0, 0L, 0);
 
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -2138,51 +2166,16 @@ class KafkaRaftClientTest {
             context.fetchResponse(epoch, leaderId, MemoryRecords.EMPTY, 0L, Errors.FENCED_LEADER_EPOCH)
         );
 
-        // unattached observer becomes a follower after discovering leader
         context.client.poll();
         context.assertElectedLeader(epoch, leaderId);
-    }
 
-    @ParameterizedTest
-    @ValueSource(booleans = { true, false })
-    public void testObserverFollowerSendFetchToBestNode(boolean withKip853Rpc) throws Exception {
-        int localId = randomReplicaId();
-        int leaderId = localId + 1;
-        int otherNodeId = localId + 2;
-        int epoch = 0;
-        Set<Integer> voters = Set.of(leaderId, otherNodeId);
-        List<InetSocketAddress> bootstrapServers = voters
-            .stream()
-            .map(RaftClientTestContext::mockAddress)
-            .toList();
+        context.time.sleep(context.fetchTimeoutMs);
 
-        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .withBootstrapServers(Optional.of(bootstrapServers))
-            .withElectedLeader(epoch, leaderId)
-            .withKip853Rpc(withKip853Rpc)
-            .build();
-
-        context.client.poll();
-
-        // observer will send fetch to the leader
-        RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
-        assertEquals(leaderId, fetchRequest.destination().id());
-        context.assertFetchRequestData(fetchRequest, epoch, 0L, 0, context.client.highWatermark());
-
-        // if request times out, observer will retry to a bootstrap server
-        context.time.sleep(context.requestTimeoutMs());
-        context.client.poll();
+        context.pollUntilRequest();
         fetchRequest = context.assertSentFetchRequest();
         assertNotEquals(leaderId, fetchRequest.destination().id());
         assertTrue(context.bootstrapIds.contains(fetchRequest.destination().id()));
-        context.assertFetchRequestData(fetchRequest, epoch, 0L, 0, context.client.highWatermark());
-
-        // observer will retry to the leader
-        context.time.sleep(context.requestTimeoutMs());
-        context.client.poll();
-        fetchRequest = context.assertSentFetchRequest();
-        assertEquals(leaderId, fetchRequest.destination().id());
-        context.assertFetchRequestData(fetchRequest, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest, epoch, 0L, 0);
     }
 
     @ParameterizedTest
@@ -2198,7 +2191,7 @@ class KafkaRaftClientTest {
         List<InetSocketAddress> bootstrapServers = voters
             .stream()
             .map(RaftClientTestContext::mockAddress)
-            .toList();
+            .collect(Collectors.toList());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withBootstrapServers(Optional.of(bootstrapServers))
@@ -2210,7 +2203,7 @@ class KafkaRaftClientTest {
         RaftRequest.Outbound discoveryFetchRequest = context.assertSentFetchRequest();
         assertFalse(voters.contains(discoveryFetchRequest.destination().id()));
         assertTrue(context.bootstrapIds.contains(discoveryFetchRequest.destination().id()));
-        context.assertFetchRequestData(discoveryFetchRequest, 0, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(discoveryFetchRequest, 0, 0L, 0);
 
         // Send a response with the leader and epoch
         context.deliverResponse(
@@ -2226,7 +2219,7 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         RaftRequest.Outbound toLeaderFetchRequest = context.assertSentFetchRequest();
         assertEquals(leaderId, toLeaderFetchRequest.destination().id());
-        context.assertFetchRequestData(toLeaderFetchRequest, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(toLeaderFetchRequest, epoch, 0L, 0);
 
         context.time.sleep(context.requestTimeoutMs());
 
@@ -2235,10 +2228,10 @@ class KafkaRaftClientTest {
         RaftRequest.Outbound retryToBootstrapServerFetchRequest = context.assertSentFetchRequest();
         assertFalse(voters.contains(retryToBootstrapServerFetchRequest.destination().id()));
         assertTrue(context.bootstrapIds.contains(retryToBootstrapServerFetchRequest.destination().id()));
-        context.assertFetchRequestData(retryToBootstrapServerFetchRequest, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(retryToBootstrapServerFetchRequest, epoch, 0L, 0);
 
         // Deliver the delayed responses from the leader
-        Records records = context.buildBatch(0L, 3, List.of("a", "b"));
+        Records records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
         context.deliverResponse(
             toLeaderFetchRequest.correlationId(),
             toLeaderFetchRequest.destination(),
@@ -2248,7 +2241,7 @@ class KafkaRaftClientTest {
         context.client.poll();
 
         // Deliver the same delayed responses from the bootstrap server and assume that it is the leader
-        records = context.buildBatch(0L, 3, List.of("a", "b"));
+        records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
         context.deliverResponse(
             retryToBootstrapServerFetchRequest.correlationId(),
             retryToBootstrapServerFetchRequest.destination(),
@@ -2272,7 +2265,7 @@ class KafkaRaftClientTest {
         List<InetSocketAddress> bootstrapServers = voters
             .stream()
             .map(RaftClientTestContext::mockAddress)
-            .toList();
+            .collect(Collectors.toList());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withBootstrapServers(Optional.of(bootstrapServers))
@@ -2284,7 +2277,7 @@ class KafkaRaftClientTest {
         RaftRequest.Outbound discoveryFetchRequest = context.assertSentFetchRequest();
         assertFalse(voters.contains(discoveryFetchRequest.destination().id()));
         assertTrue(context.bootstrapIds.contains(discoveryFetchRequest.destination().id()));
-        context.assertFetchRequestData(discoveryFetchRequest, 0, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(discoveryFetchRequest, 0, 0L, 0);
 
         // Send a response with the leader and epoch
         context.deliverResponse(
@@ -2300,7 +2293,7 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         RaftRequest.Outbound toLeaderFetchRequest = context.assertSentFetchRequest();
         assertEquals(leaderId, toLeaderFetchRequest.destination().id());
-        context.assertFetchRequestData(toLeaderFetchRequest, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(toLeaderFetchRequest, epoch, 0L, 0);
 
         context.time.sleep(context.requestTimeoutMs());
 
@@ -2309,7 +2302,7 @@ class KafkaRaftClientTest {
         RaftRequest.Outbound retryToBootstrapServerFetchRequest = context.assertSentFetchRequest();
         assertFalse(voters.contains(retryToBootstrapServerFetchRequest.destination().id()));
         assertTrue(context.bootstrapIds.contains(retryToBootstrapServerFetchRequest.destination().id()));
-        context.assertFetchRequestData(retryToBootstrapServerFetchRequest, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(retryToBootstrapServerFetchRequest, epoch, 0L, 0);
 
         // At this point toLeaderFetchRequest has timed out but retryToBootstrapServerFetchRequest
         // is still waiting for a response.
@@ -2415,23 +2408,17 @@ class KafkaRaftClientTest {
         context.assertSentFetchPartitionResponse(Errors.INVALID_REQUEST, epoch, OptionalInt.of(localId));
 
         // null cluster id is accepted
-        context.deliverRequest(
-            context.fetchRequest(epoch, null, otherNodeKey, -5L, 0, OptionalLong.of(Long.MAX_VALUE), 0)
-        );
+        context.deliverRequest(context.fetchRequest(epoch, null, otherNodeKey, -5L, 0, 0));
         context.pollUntilResponse();
         context.assertSentFetchPartitionResponse(Errors.INVALID_REQUEST, epoch, OptionalInt.of(localId));
 
         // empty cluster id is rejected
-        context.deliverRequest(
-            context.fetchRequest(epoch, "", otherNodeKey, -5L, 0, OptionalLong.of(Long.MAX_VALUE), 0)
-        );
+        context.deliverRequest(context.fetchRequest(epoch, "", otherNodeKey, -5L, 0, 0));
         context.pollUntilResponse();
         context.assertSentFetchPartitionResponse(Errors.INCONSISTENT_CLUSTER_ID);
 
         // invalid cluster id is rejected
-        context.deliverRequest(
-            context.fetchRequest(epoch, "invalid-uuid", otherNodeKey, -5L, 0, OptionalLong.of(Long.MAX_VALUE), 0)
-        );
+        context.deliverRequest(context.fetchRequest(epoch, "invalid-uuid", otherNodeKey, -5L, 0, 0));
         context.pollUntilResponse();
         context.assertSentFetchPartitionResponse(Errors.INCONSISTENT_CLUSTER_ID);
     }
@@ -2487,7 +2474,7 @@ class KafkaRaftClientTest {
         // invalid voter id is rejected
         context.deliverRequest(
             context.voteRequest(
-                context.clusterId,
+                context.clusterId.toString(),
                 epoch + 1,
                 otherNodeKey,
                 ReplicaKey.of(10, Uuid.randomUuid()),
@@ -2502,7 +2489,7 @@ class KafkaRaftClientTest {
         // invalid voter directory id is rejected
         context.deliverRequest(
             context.voteRequest(
-                context.clusterId,
+                context.clusterId.toString(),
                 epoch + 2,
                 otherNodeKey,
                 ReplicaKey.of(0, Uuid.randomUuid()),
@@ -2532,7 +2519,7 @@ class KafkaRaftClientTest {
         // Leader voter3 sends a begin quorum epoch request with incorrect voter id
         context.deliverRequest(
             context.beginEpochRequest(
-                context.clusterId,
+                context.clusterId.toString(),
                 epoch,
                 voter3,
                 ReplicaKey.of(10, Uuid.randomUuid())
@@ -2545,7 +2532,7 @@ class KafkaRaftClientTest {
         // Leader voter3 sends a begin quorum epoch request with incorrect voter directory id
         context.deliverRequest(
             context.beginEpochRequest(
-                context.clusterId,
+                context.clusterId.toString(),
                 epoch,
                 voter3,
                 ReplicaKey.of(localId, Uuid.randomUuid())
@@ -2558,7 +2545,7 @@ class KafkaRaftClientTest {
         // Leader voter3 sends a begin quorum epoch request with incorrect voter directory id
         context.deliverRequest(
             context.beginEpochRequest(
-                context.clusterId,
+                context.clusterId.toString(),
                 epoch,
                 voter3,
                 context.localReplicaKey()
@@ -2584,7 +2571,7 @@ class KafkaRaftClientTest {
         int epoch = context.currentEpoch();
 
         // valid cluster id is accepted
-        context.deliverRequest(context.beginEpochRequest(context.clusterId, epoch, localId));
+        context.deliverRequest(context.beginEpochRequest(context.clusterId.toString(), epoch, localId));
         context.pollUntilResponse();
         context.assertSentBeginQuorumEpochResponse(Errors.NONE, epoch, OptionalInt.of(localId));
 
@@ -2620,22 +2607,22 @@ class KafkaRaftClientTest {
         int epoch = context.currentEpoch();
 
         // valid cluster id is accepted
-        context.deliverRequest(context.endEpochRequest(epoch, localId, List.of(otherNodeKey)));
+        context.deliverRequest(context.endEpochRequest(epoch, localId, Collections.singletonList(otherNodeKey)));
         context.pollUntilResponse();
         context.assertSentEndQuorumEpochResponse(Errors.NONE, epoch, OptionalInt.of(localId));
 
         // null cluster id is accepted
-        context.deliverRequest(context.endEpochRequest(null, epoch, localId, List.of(otherNodeKey)));
+        context.deliverRequest(context.endEpochRequest(null, epoch, localId, Collections.singletonList(otherNodeKey)));
         context.pollUntilResponse();
         context.assertSentEndQuorumEpochResponse(Errors.NONE, epoch, OptionalInt.of(localId));
 
         // empty cluster id is rejected
-        context.deliverRequest(context.endEpochRequest("", epoch, localId, List.of(otherNodeKey)));
+        context.deliverRequest(context.endEpochRequest("", epoch, localId, Collections.singletonList(otherNodeKey)));
         context.pollUntilResponse();
         context.assertSentEndQuorumEpochResponse(Errors.INCONSISTENT_CLUSTER_ID);
 
         // invalid cluster id is rejected
-        context.deliverRequest(context.endEpochRequest("invalid-uuid", epoch, localId, List.of(otherNodeKey)));
+        context.deliverRequest(context.endEpochRequest("invalid-uuid", epoch, localId, Collections.singletonList(otherNodeKey)));
         context.pollUntilResponse();
         context.assertSentEndQuorumEpochResponse(Errors.INCONSISTENT_CLUSTER_ID);
     }
@@ -2760,7 +2747,7 @@ class KafkaRaftClientTest {
 
         // Append some records that can fulfill the Fetch request
         String[] appendRecords = new String[]{"a", "b", "c"};
-        context.client.prepareAppend(epoch, List.of(appendRecords));
+        context.client.prepareAppend(epoch, Arrays.asList(appendRecords));
         context.client.schedulePreparedAppend();
         context.client.poll();
 
@@ -2821,7 +2808,7 @@ class KafkaRaftClientTest {
 
         // Wait until we have a Fetch inflight to the leader
         context.pollUntilRequest();
-        RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest(epoch, 0L, 0, OptionalLong.empty());
+        RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest(epoch, 0L, 0);
 
         // Now await the fetch timeout and become prospective
         context.time.sleep(context.fetchTimeoutMs);
@@ -2829,7 +2816,7 @@ class KafkaRaftClientTest {
         assertTrue(context.client.quorum().isProspective());
 
         // The fetch response from the old leader returns, but it should be ignored
-        Records records = context.buildBatch(0L, 3, List.of("a", "b"));
+        Records records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
         context.deliverResponse(
             fetchRequest.correlationId(),
             fetchRequest.destination(),
@@ -2861,7 +2848,7 @@ class KafkaRaftClientTest {
 
         // Wait until we have a Fetch inflight to the leader
         context.pollUntilRequest();
-        RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest(epoch, 0L, 0, OptionalLong.empty());
+        RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest(epoch, 0L, 0);
 
         // Now receive a BeginEpoch from `voter3`
         context.deliverRequest(context.beginEpochRequest(epoch + 1, voter3));
@@ -2869,7 +2856,7 @@ class KafkaRaftClientTest {
         context.assertElectedLeader(epoch + 1, voter3);
 
         // The fetch response from the old leader returns, but it should be ignored
-        Records records = context.buildBatch(0L, 3, List.of("a", "b"));
+        Records records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
         FetchResponseData response = context.fetchResponse(epoch, voter2, records, 0L, Errors.NONE);
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -2947,7 +2934,7 @@ class KafkaRaftClientTest {
         List<InetSocketAddress> bootstrapServers = voters
             .stream()
             .map(RaftClientTestContext::mockAddress)
-            .toList();
+            .collect(Collectors.toList());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withBootstrapServers(Optional.of(bootstrapServers))
@@ -2958,7 +2945,7 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         RaftRequest.Outbound fetchRequest1 = context.assertSentFetchRequest();
         assertEquals(leaderId, fetchRequest1.destination().id());
-        context.assertFetchRequestData(fetchRequest1, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest1, epoch, 0L, 0);
 
         context.deliverResponse(
             fetchRequest1.correlationId(),
@@ -2972,7 +2959,7 @@ class KafkaRaftClientTest {
         RaftRequest.Outbound fetchRequest2 = context.assertSentFetchRequest();
         assertNotEquals(leaderId, fetchRequest2.destination().id());
         assertTrue(context.bootstrapIds.contains(fetchRequest2.destination().id()));
-        context.assertFetchRequestData(fetchRequest2, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest2, epoch, 0L, 0);
     }
 
     @ParameterizedTest
@@ -2986,7 +2973,7 @@ class KafkaRaftClientTest {
         List<InetSocketAddress> bootstrapServers = voters
             .stream()
             .map(RaftClientTestContext::mockAddress)
-            .toList();
+            .collect(Collectors.toList());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withBootstrapServers(Optional.of(bootstrapServers))
@@ -2997,7 +2984,7 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         RaftRequest.Outbound fetchRequest1 = context.assertSentFetchRequest();
         assertEquals(leaderId, fetchRequest1.destination().id());
-        context.assertFetchRequestData(fetchRequest1, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest1, epoch, 0L, 0);
 
         context.time.sleep(context.requestTimeoutMs());
         context.pollUntilRequest();
@@ -3007,7 +2994,7 @@ class KafkaRaftClientTest {
         RaftRequest.Outbound fetchRequest2 = context.assertSentFetchRequest();
         assertNotEquals(leaderId, fetchRequest2.destination().id());
         assertTrue(context.bootstrapIds.contains(fetchRequest2.destination().id()));
-        context.assertFetchRequestData(fetchRequest2, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest2, epoch, 0L, 0);
     }
 
     @ParameterizedTest
@@ -3021,19 +3008,19 @@ class KafkaRaftClientTest {
         List<InetSocketAddress> bootstrapServers = voters
             .stream()
             .map(RaftClientTestContext::mockAddress)
-            .toList();
+            .collect(Collectors.toList());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withBootstrapServers(Optional.of(bootstrapServers))
             .withKip853Rpc(withKip853Rpc)
             .build();
 
-        context.discoverLeaderAsObserver(leaderId, epoch, context.client.highWatermark());
+        context.discoverLeaderAsObserver(leaderId, epoch);
 
         context.pollUntilRequest();
         RaftRequest.Outbound fetchRequest1 = context.assertSentFetchRequest();
         assertEquals(leaderId, fetchRequest1.destination().id());
-        context.assertFetchRequestData(fetchRequest1, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest1, epoch, 0L, 0);
 
         context.deliverResponse(
             fetchRequest1.correlationId(),
@@ -3047,7 +3034,7 @@ class KafkaRaftClientTest {
         RaftRequest.Outbound fetchRequest2 = context.assertSentFetchRequest();
         assertNotEquals(leaderId, fetchRequest2.destination().id());
         assertTrue(context.bootstrapIds.contains(fetchRequest2.destination().id()));
-        context.assertFetchRequestData(fetchRequest2, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest2, epoch, 0L, 0);
 
         context.deliverResponse(
             fetchRequest2.correlationId(),
@@ -3070,19 +3057,19 @@ class KafkaRaftClientTest {
         List<InetSocketAddress> bootstrapServers = voters
             .stream()
             .map(RaftClientTestContext::mockAddress)
-            .toList();
+            .collect(Collectors.toList());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withBootstrapServers(Optional.of(bootstrapServers))
             .withKip853Rpc(withKip853Rpc)
             .build();
 
-        context.discoverLeaderAsObserver(leaderId, epoch, context.client.highWatermark());
+        context.discoverLeaderAsObserver(leaderId, epoch);
 
         context.pollUntilRequest();
         RaftRequest.Outbound fetchRequest1 = context.assertSentFetchRequest();
         assertEquals(leaderId, fetchRequest1.destination().id());
-        context.assertFetchRequestData(fetchRequest1, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest1, epoch, 0L, 0);
 
         context.time.sleep(context.requestTimeoutMs());
         context.pollUntilRequest();
@@ -3092,7 +3079,7 @@ class KafkaRaftClientTest {
         RaftRequest.Outbound fetchRequest2 = context.assertSentFetchRequest();
         assertNotEquals(leaderId, fetchRequest2.destination().id());
         assertTrue(context.bootstrapIds.contains(fetchRequest2.destination().id()));
-        context.assertFetchRequestData(fetchRequest2, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest2, epoch, 0L, 0);
 
         context.deliverResponse(
             fetchRequest2.correlationId(),
@@ -3172,7 +3159,7 @@ class KafkaRaftClientTest {
         context.assertSentFetchPartitionResponse(1L, epoch);
 
         // Append some records, so that the close follower will be able to advance further.
-        context.client.prepareAppend(epoch, List.of("foo", "bar"));
+        context.client.prepareAppend(epoch, Arrays.asList("foo", "bar"));
         context.client.schedulePreparedAppend();
         context.client.poll();
 
@@ -3194,7 +3181,7 @@ class KafkaRaftClientTest {
             epoch,
             Set.of(closeFollower.id(), laggingFollower.id()),
             Optional.of(
-                List.of(
+                Arrays.asList(
                     replicaKey(closeFollower.id(), false),
                     replicaKey(laggingFollower.id(), false)
                 )
@@ -3252,7 +3239,7 @@ class KafkaRaftClientTest {
         // Describe quorum response will not include directory ids
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
-        List<ReplicaState> expectedVoterStates = List.of(
+        List<ReplicaState> expectedVoterStates = Arrays.asList(
             new ReplicaState()
                 .setReplicaId(localId)
                 .setReplicaDirectoryId(ReplicaKey.NO_DIRECTORY_ID)
@@ -3265,7 +3252,7 @@ class KafkaRaftClientTest {
                 .setLogEndOffset(-1L)
                 .setLastFetchTimestamp(-1)
                 .setLastCaughtUpTimestamp(-1));
-        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, List.of());
+        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, Collections.emptyList());
     }
 
     @ParameterizedTest
@@ -3303,7 +3290,7 @@ class KafkaRaftClientTest {
         // Describe quorum response before any fetches made
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
-        List<ReplicaState> expectedVoterStates = List.of(
+        List<ReplicaState> expectedVoterStates = Arrays.asList(
             new ReplicaState()
                 .setReplicaId(localId)
                 .setReplicaDirectoryId(withBootstrapSnapshot ? context.localReplicaKey().directoryId().get() : ReplicaKey.NO_DIRECTORY_ID)
@@ -3322,7 +3309,7 @@ class KafkaRaftClientTest {
                 .setLogEndOffset(-1L)
                 .setLastFetchTimestamp(-1)
                 .setLastCaughtUpTimestamp(-1));
-        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, List.of());
+        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, Collections.emptyList());
 
         context.time.sleep(100);
         long fetchOffset = withBootstrapSnapshot ? 3L : 1L;
@@ -3332,7 +3319,7 @@ class KafkaRaftClientTest {
         long expectedHW = fetchOffset;
         context.assertSentFetchPartitionResponse(expectedHW, epoch);
 
-        List<String> records = List.of("foo", "bar");
+        List<String> records = Arrays.asList("foo", "bar");
         long nextFetchOffset = fetchOffset + records.size();
         context.client.prepareAppend(epoch, records);
         context.client.schedulePreparedAppend();
@@ -3350,7 +3337,7 @@ class KafkaRaftClientTest {
             .setLogEndOffset(fetchOffset)
             .setLastFetchTimestamp(followerFetchTime1)
             .setLastCaughtUpTimestamp(followerFetchTime1);
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
 
         // After follower2 catches up to leader
         context.time.sleep(100);
@@ -3371,13 +3358,13 @@ class KafkaRaftClientTest {
             .setLogEndOffset(nextFetchOffset)
             .setLastFetchTimestamp(followerFetchTime2)
             .setLastCaughtUpTimestamp(followerFetchTime2);
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
 
         // Describe quorum returns error if leader loses leadership
         context.time.sleep(context.checkQuorumTimeoutMs);
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
-        context.assertSentDescribeQuorumResponse(Errors.NOT_LEADER_OR_FOLLOWER, 0, 0, 0, List.of(), List.of());
+        context.assertSentDescribeQuorumResponse(Errors.NOT_LEADER_OR_FOLLOWER, 0, 0, 0, Collections.emptyList(), Collections.emptyList());
     }
 
     @ParameterizedTest
@@ -3428,7 +3415,7 @@ class KafkaRaftClientTest {
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
 
-        List<ReplicaState> expectedVoterStates = List.of(
+        List<ReplicaState> expectedVoterStates = Arrays.asList(
             new ReplicaState()
                 .setReplicaId(localId)
                 .setReplicaDirectoryId(withBootstrapSnapshot ? localDirectoryId : ReplicaKey.NO_DIRECTORY_ID)
@@ -3443,7 +3430,7 @@ class KafkaRaftClientTest {
                 .setLogEndOffset(fetchOffset)
                 .setLastFetchTimestamp(followerFetchTime)
                 .setLastCaughtUpTimestamp(followerFetchTime));
-        List<ReplicaState> expectedObserverStates = List.of(
+        List<ReplicaState> expectedObserverStates = singletonList(
             new ReplicaState()
                 .setReplicaId(observer.id())
                 .setReplicaDirectoryId(observerDirectoryId)
@@ -3474,7 +3461,7 @@ class KafkaRaftClientTest {
 
         // Observer falls behind
         context.time.sleep(100);
-        List<String> records = List.of("foo", "bar");
+        List<String> records = Arrays.asList("foo", "bar");
         context.client.prepareAppend(epoch, records);
         context.client.schedulePreparedAppend();
         context.client.poll();
@@ -3508,7 +3495,7 @@ class KafkaRaftClientTest {
             .setLastCaughtUpTimestamp(context.time.milliseconds());
         expectedVoterStates.get(1)
             .setLastFetchTimestamp(followerFetchTime);
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
 
         // No-op for negative node id
         context.deliverRequest(context.fetchRequest(epoch, ReplicaKey.of(-1, ReplicaKey.NO_DIRECTORY_ID), 0L, 0, 0));
@@ -3520,7 +3507,7 @@ class KafkaRaftClientTest {
         expectedVoterStates.get(0)
             .setLastFetchTimestamp(context.time.milliseconds())
             .setLastCaughtUpTimestamp(context.time.milliseconds());
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
     }
 
     @ParameterizedTest
@@ -3550,7 +3537,7 @@ class KafkaRaftClientTest {
 
         // Update HW to non-initial value
         context.time.sleep(100);
-        List<String> batch = List.of("foo", "bar");
+        List<String> batch = Arrays.asList("foo", "bar");
         context.client.prepareAppend(epoch, batch);
         context.client.schedulePreparedAppend();
         context.client.poll();
@@ -3564,7 +3551,7 @@ class KafkaRaftClientTest {
         context.time.sleep(100);
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
-        List<ReplicaState> expectedVoterStates = List.of(
+        List<ReplicaState> expectedVoterStates = Arrays.asList(
             new ReplicaState()
                 .setReplicaId(localId)
                 .setReplicaDirectoryId(withBootstrapSnapshot ? local.directoryId().get() : ReplicaKey.NO_DIRECTORY_ID)
@@ -3577,7 +3564,7 @@ class KafkaRaftClientTest {
                 .setLogEndOffset(fetchOffset)
                 .setLastFetchTimestamp(followerFetchTime)
                 .setLastCaughtUpTimestamp(followerFetchTime));
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
 
         // Follower crashes and disk is lost. It fetches an earlier offset to rebuild state.
         // The leader will report an error in the logs, but will not let the high watermark rewind
@@ -3596,7 +3583,7 @@ class KafkaRaftClientTest {
         expectedVoterStates.get(1)
             .setLogEndOffset(fetchOffset - batch.size())
             .setLastFetchTimestamp(followerFetchTime);
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
     }
 
     @ParameterizedTest
@@ -3621,7 +3608,7 @@ class KafkaRaftClientTest {
         // check describe quorum response has both followers
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
-        List<ReplicaState> expectedVoterStates = List.of(
+        List<ReplicaState> expectedVoterStates = Arrays.asList(
             new ReplicaState()
                 .setReplicaId(localId)
                 .setReplicaDirectoryId(withKip853Rpc ? local.directoryId().get() : ReplicaKey.NO_DIRECTORY_ID)
@@ -3640,7 +3627,7 @@ class KafkaRaftClientTest {
                 .setLogEndOffset(-1L)
                 .setLastFetchTimestamp(-1)
                 .setLastCaughtUpTimestamp(-1));
-        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, List.of());
+        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, Collections.emptyList());
     }
 
 
@@ -3679,7 +3666,7 @@ class KafkaRaftClientTest {
         context.client.poll();
         assertFalse(context.client.isRunning());
         assertTrue(shutdownFuture.isCompletedExceptionally());
-        assertFutureThrows(TimeoutException.class, shutdownFuture);
+        assertFutureThrows(shutdownFuture, TimeoutException.class);
     }
 
     @ParameterizedTest
@@ -3740,7 +3727,7 @@ class KafkaRaftClientTest {
     @ValueSource(booleans = { true, false })
     public void testGracefulShutdownSingleMemberQuorum(boolean withKip853Rpc) throws IOException {
         int localId = randomReplicaId();
-        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Set.of(localId))
+        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Collections.singleton(localId))
             .withKip853Rpc(withKip853Rpc)
             .build();
 
@@ -3770,8 +3757,8 @@ class KafkaRaftClientTest {
 
         context.pollUntilRequest();
 
-        RaftRequest.Outbound fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0, OptionalLong.empty());
-        Records records = context.buildBatch(0L, 3, List.of("a", "b"));
+        RaftRequest.Outbound fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0);
+        Records records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
         FetchResponseData response = context.fetchResponse(epoch, otherNodeId, records, 0L, Errors.NONE);
         context.deliverResponse(
             fetchQuorumRequest.correlationId(),
@@ -3786,7 +3773,7 @@ class KafkaRaftClientTest {
 
     @ParameterizedTest
     @CsvSource({ "true, true", "true, false", "false, true", "false, false" })
-    public void testObserverReplication(boolean withKip853Rpc, boolean canBecomeVoter) throws Exception {
+    public void testObserverReplication(boolean withKip853Rpc, boolean alwaysFlush) throws Exception {
         int localId = randomReplicaId();
         int otherNodeId = localId + 1;
         int epoch = 5;
@@ -3795,14 +3782,14 @@ class KafkaRaftClientTest {
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withElectedLeader(epoch, otherNodeId)
             .withKip853Rpc(withKip853Rpc)
-            .withCanBecomeVoter(canBecomeVoter)
+            .withAlwaysFlush(alwaysFlush)
             .build();
         context.assertElectedLeader(epoch, otherNodeId);
 
         context.pollUntilRequest();
 
-        RaftRequest.Outbound fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0, OptionalLong.empty());
-        Records records = context.buildBatch(0L, 3, List.of("a", "b"));
+        RaftRequest.Outbound fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0);
+        Records records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
         FetchResponseData response = context.fetchResponse(epoch, otherNodeId, records, 0L, Errors.NONE);
         context.deliverResponse(
             fetchQuorumRequest.correlationId(),
@@ -3812,7 +3799,7 @@ class KafkaRaftClientTest {
 
         context.client.poll();
         assertEquals(2L, context.log.endOffset().offset());
-        long firstUnflushedOffset = canBecomeVoter ? 2L : 0L;
+        long firstUnflushedOffset = alwaysFlush ? 2L : 0L;
         assertEquals(firstUnflushedOffset, context.log.firstUnflushedOffset());
     }
 
@@ -3832,7 +3819,7 @@ class KafkaRaftClientTest {
 
         // Receive an empty fetch response
         context.pollUntilRequest();
-        RaftRequest.Outbound fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0, OptionalLong.empty());
+        RaftRequest.Outbound fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0);
         FetchResponseData fetchResponse = context.fetchResponse(
             epoch,
             otherNodeId,
@@ -3851,8 +3838,8 @@ class KafkaRaftClientTest {
 
         // Receive some records in the next poll, but do not advance high watermark
         context.pollUntilRequest();
-        Records records = context.buildBatch(0L, epoch, List.of("a", "b"));
-        fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0, OptionalLong.of(0));
+        Records records = context.buildBatch(0L, epoch, Arrays.asList("a", "b"));
+        fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0);
         fetchResponse = context.fetchResponse(epoch, otherNodeId, records, 0L, Errors.NONE);
         context.deliverResponse(
             fetchQuorumRequest.correlationId(),
@@ -3865,7 +3852,7 @@ class KafkaRaftClientTest {
 
         // The next fetch response is empty, but should still advance the high watermark
         context.pollUntilRequest();
-        fetchQuorumRequest = context.assertSentFetchRequest(epoch, 2L, epoch, OptionalLong.of(0));
+        fetchQuorumRequest = context.assertSentFetchRequest(epoch, 2L, epoch);
         fetchResponse = context.fetchResponse(
             epoch,
             otherNodeId,
@@ -3923,7 +3910,7 @@ class KafkaRaftClientTest {
     @ValueSource(booleans = { true, false })
     public void testLeaderAppendSingleMemberQuorum(boolean withKip853Rpc) throws Exception {
         int localId = randomReplicaId();
-        Set<Integer> voters = Set.of(localId);
+        Set<Integer> voters = Collections.singleton(localId);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withKip853Rpc(withKip853Rpc)
@@ -3942,7 +3929,7 @@ class KafkaRaftClientTest {
         context.client.poll();
         assertEquals(OptionalLong.of(1L), context.client.highWatermark());
 
-        context.client.prepareAppend(context.currentEpoch(), List.of(appendRecords));
+        context.client.prepareAppend(context.currentEpoch(), Arrays.asList(appendRecords));
         context.client.schedulePreparedAppend();
 
         // Then poll the appended data with leader change record
@@ -3981,10 +3968,10 @@ class KafkaRaftClientTest {
         List<Record> readRecords = Utils.toList(leaderChangeBatch.iterator());
         assertEquals(1, readRecords.size());
 
-        Record expectedRecord = readRecords.get(0);
-        assertEquals(now, expectedRecord.timestamp());
-        RaftClientTestContext.verifyLeaderChangeMessage(localId, List.of(localId),
-                List.of(localId), expectedRecord.key(), expectedRecord.value());
+        Record record = readRecords.get(0);
+        assertEquals(now, record.timestamp());
+        RaftClientTestContext.verifyLeaderChangeMessage(localId, Collections.singletonList(localId),
+            Collections.singletonList(localId), record.key(), record.value());
 
         MutableRecordBatch batch = batches.get(1);
         assertEquals(1, batch.partitionLeaderEpoch());
@@ -4007,8 +3994,8 @@ class KafkaRaftClientTest {
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withElectedLeader(epoch, otherNodeId)
-            .appendToLog(lastEpoch, List.of("foo", "bar"))
-            .appendToLog(lastEpoch, List.of("baz"))
+            .appendToLog(lastEpoch, Arrays.asList("foo", "bar"))
+            .appendToLog(lastEpoch, singletonList("baz"))
             .withKip853Rpc(withKip853Rpc)
             .build();
 
@@ -4017,20 +4004,10 @@ class KafkaRaftClientTest {
 
         context.pollUntilRequest();
 
-        RaftRequest.Outbound request = context.assertSentFetchRequest(
-            epoch,
-            3L,
-            lastEpoch,
-            OptionalLong.empty()
-        );
+        RaftRequest.Outbound request = context.assertSentFetchRequest(epoch, 3L, lastEpoch);
 
-        FetchResponseData response = context.divergingFetchResponse(
-            epoch,
-            otherNodeId,
-            2L,
-            lastEpoch,
-            1L
-        );
+        FetchResponseData response = context.divergingFetchResponse(epoch, otherNodeId, 2L,
+            lastEpoch, 1L);
         context.deliverResponse(request.correlationId(), request.destination(), response);
 
         // Poll again to complete truncation
@@ -4040,7 +4017,7 @@ class KafkaRaftClientTest {
 
         // Now we should be fetching
         context.client.poll();
-        context.assertSentFetchRequest(epoch, 2L, lastEpoch, context.client.highWatermark());
+        context.assertSentFetchRequest(epoch, 2L, lastEpoch);
     }
 
     @ParameterizedTest
@@ -4048,22 +4025,29 @@ class KafkaRaftClientTest {
     public void testMetrics(boolean withKip853Rpc) throws Exception {
         int localId = randomReplicaId();
         int epoch = 1;
-        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Set.of(localId))
+        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Collections.singleton(localId))
             .withKip853Rpc(withKip853Rpc)
             .build();
         context.pollUntil(() -> context.log.endOffset().offset() == 1L);
 
-        var metricNames = Set.of(
-                "current-state", "current-leader", "current-vote", "current-epoch", "high-watermark",
-                "log-end-offset", "log-end-epoch", "number-unknown-voter-connections", "poll-idle-ratio-avg",
-                "commit-latency-avg", "commit-latency-max", "election-latency-avg", "election-latency-max",
-                "fetch-records-rate", "append-records-rate", "number-of-voters", "number-of-observers",
-                "uncommitted-voter-change"
-        );
-
-        for (String metricName : metricNames) {
-            assertNotNull(getMetric(context.metrics, metricName));
-        }
+        assertNotNull(getMetric(context.metrics, "current-state"));
+        assertNotNull(getMetric(context.metrics, "current-leader"));
+        assertNotNull(getMetric(context.metrics, "current-vote"));
+        assertNotNull(getMetric(context.metrics, "current-epoch"));
+        assertNotNull(getMetric(context.metrics, "high-watermark"));
+        assertNotNull(getMetric(context.metrics, "log-end-offset"));
+        assertNotNull(getMetric(context.metrics, "log-end-epoch"));
+        assertNotNull(getMetric(context.metrics, "number-unknown-voter-connections"));
+        assertNotNull(getMetric(context.metrics, "poll-idle-ratio-avg"));
+        assertNotNull(getMetric(context.metrics, "commit-latency-avg"));
+        assertNotNull(getMetric(context.metrics, "commit-latency-max"));
+        assertNotNull(getMetric(context.metrics, "election-latency-avg"));
+        assertNotNull(getMetric(context.metrics, "election-latency-max"));
+        assertNotNull(getMetric(context.metrics, "fetch-records-rate"));
+        assertNotNull(getMetric(context.metrics, "append-records-rate"));
+        assertNotNull(getMetric(context.metrics, "number-of-voters"));
+        assertNotNull(getMetric(context.metrics, "number-of-observers"));
+        assertNotNull(getMetric(context.metrics, "uncommitted-voter-change"));
 
         assertEquals("leader", getMetric(context.metrics, "current-state").metricValue());
         assertEquals((double) localId, getMetric(context.metrics, "current-leader").metricValue());
@@ -4073,7 +4057,7 @@ class KafkaRaftClientTest {
         assertEquals((double) 1L, getMetric(context.metrics, "log-end-offset").metricValue());
         assertEquals((double) epoch, getMetric(context.metrics, "log-end-epoch").metricValue());
 
-        context.client.prepareAppend(epoch, List.of("a", "b", "c"));
+        context.client.prepareAppend(epoch, Arrays.asList("a", "b", "c"));
         context.client.schedulePreparedAppend();
         context.client.poll();
 
@@ -4085,6 +4069,116 @@ class KafkaRaftClientTest {
 
         // should only have total-metrics-count left
         assertEquals(1, context.metrics.metrics().size());
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    public void testClusterAuthorizationFailedInFetch(boolean withKip853Rpc) throws Exception {
+        int localId = randomReplicaId();
+        int otherNodeId = localId + 1;
+        int epoch = 5;
+        Set<Integer> voters = Set.of(localId, otherNodeId);
+
+        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
+            .withKip853Rpc(withKip853Rpc)
+            .withElectedLeader(epoch, otherNodeId)
+            .build();
+
+        context.assertElectedLeader(epoch, otherNodeId);
+
+        context.pollUntilRequest();
+
+        RaftRequest.Outbound request = context.assertSentFetchRequest(epoch, 0, 0);
+        FetchResponseData response = new FetchResponseData()
+            .setErrorCode(Errors.CLUSTER_AUTHORIZATION_FAILED.code());
+        context.deliverResponse(
+            request.correlationId(),
+            request.destination(),
+            response
+        );
+        assertThrows(ClusterAuthorizationException.class, context.client::poll);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    public void testClusterAuthorizationFailedInBeginQuorumEpoch(boolean withKip853Rpc) throws Exception {
+        int localId = randomReplicaId();
+        int otherNodeId = localId + 1;
+        int epoch = 5;
+        Set<Integer> voters = Set.of(localId, otherNodeId);
+
+        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
+            .updateRandom(r -> r.mockNextInt(DEFAULT_ELECTION_TIMEOUT_MS, 0))
+            .withUnknownLeader(epoch - 1)
+            .withKip853Rpc(withKip853Rpc)
+            .build();
+
+        context.time.sleep(context.electionTimeoutMs());
+        context.expectAndGrantPreVotes(epoch - 1);
+        context.expectAndGrantVotes(epoch);
+
+        context.pollUntilRequest();
+        List<RaftRequest.Outbound> requests = context.collectBeginEpochRequests(epoch);
+        assertEquals(1, requests.size());
+        RaftRequest.Outbound request = requests.get(0);
+        assertEquals(otherNodeId, request.destination().id());
+        BeginQuorumEpochResponseData response = new BeginQuorumEpochResponseData()
+            .setErrorCode(Errors.CLUSTER_AUTHORIZATION_FAILED.code());
+
+        context.deliverResponse(request.correlationId(), request.destination(), response);
+        assertThrows(ClusterAuthorizationException.class, context.client::poll);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    public void testClusterAuthorizationFailedInVote(boolean withKip853Rpc) throws Exception {
+        int localId = randomReplicaId();
+        int otherNodeId = localId + 1;
+        int epoch = 5;
+        Set<Integer> voters = Set.of(localId, otherNodeId);
+
+        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
+            .withUnknownLeader(epoch - 1)
+            .withKip853Rpc(withKip853Rpc)
+            .build();
+
+        // Become a candidate
+        context.unattachedToCandidate();
+        context.pollUntilRequest();
+        context.assertVotedCandidate(epoch, localId);
+
+        RaftRequest.Outbound request = context.assertSentVoteRequest(epoch, 0, 0L, 1);
+        VoteResponseData response = new VoteResponseData()
+            .setErrorCode(Errors.CLUSTER_AUTHORIZATION_FAILED.code());
+
+        context.deliverResponse(request.correlationId(), request.destination(), response);
+        assertThrows(ClusterAuthorizationException.class, context.client::poll);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    public void testClusterAuthorizationFailedInEndQuorumEpoch(boolean withKip853Rpc) throws Exception {
+        int localId = randomReplicaId();
+        int otherNodeId = localId + 1;
+        Set<Integer> voters = Set.of(localId, otherNodeId);
+
+        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
+            .withUnknownLeader(1)
+            .withKip853Rpc(withKip853Rpc)
+            .build();
+
+        context.unattachedToLeader();
+        int epoch = context.currentEpoch();
+
+        context.client.shutdown(5000);
+        context.pollUntilRequest();
+
+        RaftRequest.Outbound request = context.assertSentEndQuorumEpochRequest(epoch, otherNodeId);
+        EndQuorumEpochResponseData response = new EndQuorumEpochResponseData()
+            .setErrorCode(Errors.CLUSTER_AUTHORIZATION_FAILED.code());
+
+        context.deliverResponse(request.correlationId(), request.destination(), response);
+        assertThrows(ClusterAuthorizationException.class, context.client::poll);
     }
 
     @ParameterizedTest
@@ -4144,11 +4238,11 @@ class KafkaRaftClientTest {
         int epoch = 5;
         Set<Integer> voters = Set.of(localId, otherNodeKey.id());
 
-        List<String> batch1 = List.of("1", "2", "3");
-        List<String> batch2 = List.of("4", "5", "6");
-        List<String> batch3 = List.of("7", "8", "9");
+        List<String> batch1 = Arrays.asList("1", "2", "3");
+        List<String> batch2 = Arrays.asList("4", "5", "6");
+        List<String> batch3 = Arrays.asList("7", "8", "9");
 
-        List<List<String>> expectedBatches = List.of(batch1, batch2, batch3);
+        List<List<String>> expectedBatches = Arrays.asList(batch1, batch2, batch3);
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .appendToLog(1, batch1)
             .appendToLog(1, batch2)
@@ -4211,9 +4305,9 @@ class KafkaRaftClientTest {
         int epoch = 5;
         Set<Integer> voters = Set.of(localId, otherNodeKey.id());
 
-        List<String> batch1 = List.of("1", "2", "3");
-        List<String> batch2 = List.of("4", "5", "6");
-        List<String> batch3 = List.of("7", "8", "9");
+        List<String> batch1 = Arrays.asList("1", "2", "3");
+        List<String> batch2 = Arrays.asList("4", "5", "6");
+        List<String> batch3 = Arrays.asList("7", "8", "9");
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .appendToLog(1, batch1)
@@ -4254,9 +4348,9 @@ class KafkaRaftClientTest {
         int epoch = 5;
         Set<Integer> voters = Set.of(localId, otherNodeId);
 
-        List<String> batch1 = List.of("1", "2", "3");
-        List<String> batch2 = List.of("4", "5", "6");
-        List<String> batch3 = List.of("7", "8", "9");
+        List<String> batch1 = Arrays.asList("1", "2", "3");
+        List<String> batch2 = Arrays.asList("4", "5", "6");
+        List<String> batch3 = Arrays.asList("7", "8", "9");
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .appendToLog(1, batch1)
@@ -4281,7 +4375,7 @@ class KafkaRaftClientTest {
         context.client.unregister(secondListener);
 
         // Write to the log and show that the default listener gets updated...
-        assertEquals(10L, context.client.prepareAppend(epoch, List.of("a")));
+        assertEquals(10L, context.client.prepareAppend(epoch, singletonList("a")));
         context.client.schedulePreparedAppend();
         context.client.poll();
         context.advanceLocalLeaderHighWatermarkToLogEndOffset();
@@ -4308,10 +4402,10 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
         assertTrue(voters.contains(fetchRequest.destination().id()));
-        context.assertFetchRequestData(fetchRequest, epoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest, epoch, 0L, 0);
 
         // The response does not advance the high watermark
-        List<String> records1 = List.of("a", "b", "c");
+        List<String> records1 = Arrays.asList("a", "b", "c");
         MemoryRecords batch1 = context.buildBatch(0L, 3, records1);
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -4329,10 +4423,10 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         fetchRequest = context.assertSentFetchRequest();
         assertTrue(voters.contains(fetchRequest.destination().id()));
-        context.assertFetchRequestData(fetchRequest, epoch, 3L, 3, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest, epoch, 3L, 3);
 
         // The high watermark advances to include the first batch we fetched
-        List<String> records2 = List.of("d", "e", "f");
+        List<String> records2 = Arrays.asList("d", "e", "f");
         MemoryRecords batch2 = context.buildBatch(3L, 3, records2);
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -4360,9 +4454,9 @@ class KafkaRaftClientTest {
         Set<Integer> voters = Set.of(localId, otherNodeKey.id());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(2, List.of("a", "b", "c"))
-            .appendToLog(4, List.of("d", "e", "f"))
-            .appendToLog(4, List.of("g", "h", "i"))
+            .appendToLog(2, Arrays.asList("a", "b", "c"))
+            .appendToLog(4, Arrays.asList("d", "e", "f"))
+            .appendToLog(4, Arrays.asList("g", "h", "i"))
             .withUnknownLeader(epoch - 1)
             .withKip853Rpc(withKip853Rpc)
             .build();
@@ -4407,9 +4501,9 @@ class KafkaRaftClientTest {
         Set<Integer> voters = Set.of(localId, otherNodeKey.id());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(2, List.of("a", "b", "c"))
-            .appendToLog(4, List.of("d", "e", "f"))
-            .appendToLog(4, List.of("g", "h", "i"))
+            .appendToLog(2, Arrays.asList("a", "b", "c"))
+            .appendToLog(4, Arrays.asList("d", "e", "f"))
+            .appendToLog(4, Arrays.asList("g", "h", "i"))
             .withUnknownLeader(epoch - 1)
             .withKip853Rpc(withKip853Rpc)
             .build();
@@ -4555,7 +4649,7 @@ class KafkaRaftClientTest {
         List<InetSocketAddress> bootstrapServers = voters
             .stream()
             .map(RaftClientTestContext::mockAddress)
-            .toList();
+            .collect(Collectors.toList());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(OptionalInt.empty(), voters)
             .withBootstrapServers(Optional.of(bootstrapServers))
@@ -4567,7 +4661,7 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         RaftRequest.Outbound fetchRequest1 = context.assertSentFetchRequest();
         assertTrue(context.bootstrapIds.contains(fetchRequest1.destination().id()));
-        context.assertFetchRequestData(fetchRequest1, 0, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest1, 0, 0L, 0);
 
         int leaderEpoch = 5;
 
@@ -4584,9 +4678,9 @@ class KafkaRaftClientTest {
         context.pollUntilRequest();
         RaftRequest.Outbound fetchRequest2 = context.assertSentFetchRequest();
         assertEquals(leaderId, fetchRequest2.destination().id());
-        context.assertFetchRequestData(fetchRequest2, leaderEpoch, 0L, 0, context.client.highWatermark());
+        context.assertFetchRequestData(fetchRequest2, leaderEpoch, 0L, 0);
 
-        List<String> records = List.of("a", "b", "c");
+        List<String> records = Arrays.asList("a", "b", "c");
         MemoryRecords batch1 = context.buildBatch(0L, 3, records);
         context.deliverResponse(
             fetchRequest2.correlationId(),
