@@ -52,6 +52,7 @@ import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -545,7 +546,12 @@ public class RaftEventSimulationTest {
         }
     }
 
-    private record SequentialAppendAction(Cluster cluster) implements Runnable {
+    private static class SequentialAppendAction implements Runnable {
+        final Cluster cluster;
+
+        private SequentialAppendAction(Cluster cluster) {
+            this.cluster = cluster;
+        }
 
         @Override
         public void run() {
@@ -851,7 +857,7 @@ public class RaftEventSimulationTest {
 
         private static Endpoints endpointsFromId(int nodeId, ListenerName listenerName) {
             return Endpoints.fromInetSocketAddresses(
-                Map.of(
+                Collections.singletonMap(
                     listenerName,
                     InetSocketAddress.createUnresolved(hostFromId(nodeId), PORT)
                 )
@@ -896,7 +902,7 @@ public class RaftEventSimulationTest {
                 FETCH_MAX_WAIT_MS,
                 true,
                 clusterId,
-                List.of(),
+                Collections.emptyList(),
                 endpointsFromId(nodeId, channel.listenerName()),
                 Feature.KRAFT_VERSION.supportedVersionRange(),
                 logContext,
@@ -922,7 +928,6 @@ public class RaftEventSimulationTest {
     }
 
     private static class RaftNode {
-        final LogContext logContext;
         final int nodeId;
         final KafkaRaftClient<Integer> client;
         final MockLog log;
@@ -944,7 +949,6 @@ public class RaftEventSimulationTest {
             Random random,
             RecordSerde<Integer> intSerde
         ) {
-            this.logContext = logContext;
             this.nodeId = nodeId;
             this.client = client;
             this.log = log;
@@ -994,13 +998,16 @@ public class RaftEventSimulationTest {
                 logEndOffset()
             );
         }
-
-        LogContext logContext() {
-            return logContext;
-        }
     }
 
-    private record InflightRequest(int sourceId, Node destination) {
+    private static class InflightRequest {
+        final int sourceId;
+        final Node destination;
+
+        private InflightRequest(int sourceId, Node destination) {
+            this.sourceId = sourceId;
+            this.destination = destination;
+        }
     }
 
     private interface NetworkFilter {
@@ -1034,13 +1041,16 @@ public class RaftEventSimulationTest {
         }
     }
 
-    private record DropOutboundRequestsTo(Set<InetSocketAddress> unreachable) implements NetworkFilter {
+    private static class DropOutboundRequestsTo implements NetworkFilter {
+        private final Set<InetSocketAddress> unreachable;
+
         /**
          * This network filter drops any outbound message sent to the {@code unreachable} nodes.
          *
          * @param unreachable the set of destination address which are not reachable
          */
-        private DropOutboundRequestsTo {
+        private DropOutboundRequestsTo(Set<InetSocketAddress> unreachable) {
+            this.unreachable = unreachable;
         }
 
         @Override
@@ -1060,7 +1070,8 @@ public class RaftEventSimulationTest {
          */
         @Override
         public boolean acceptOutbound(RaftMessage message) {
-            if (message instanceof RaftRequest.Outbound request) {
+            if (message instanceof RaftRequest.Outbound) {
+                RaftRequest.Outbound request = (RaftRequest.Outbound) message;
                 InetSocketAddress destination = InetSocketAddress.createUnresolved(
                     request.destination().host(),
                     request.destination().port()
@@ -1108,7 +1119,12 @@ public class RaftEventSimulationTest {
         }
     }
 
-    private record MajorityReachedHighWatermark(Cluster cluster) implements Invariant {
+    private static class MajorityReachedHighWatermark implements Invariant {
+        final Cluster cluster;
+
+        private MajorityReachedHighWatermark(Cluster cluster) {
+            this.cluster = cluster;
+        }
 
         @Override
         public void verify() {
@@ -1214,7 +1230,12 @@ public class RaftEventSimulationTest {
         }
     }
 
-    private record SnapshotAtLogStart(Cluster cluster) implements Invariant {
+    private static class SnapshotAtLogStart implements Invariant {
+        final Cluster cluster;
+
+        private SnapshotAtLogStart(Cluster cluster) {
+            this.cluster = cluster;
+        }
 
         @Override
         public void verify() {
@@ -1255,7 +1276,12 @@ public class RaftEventSimulationTest {
         }
     }
 
-    private record LeaderNeverLoadSnapshot(Cluster cluster) implements Invariant {
+    private static class LeaderNeverLoadSnapshot implements Invariant {
+        final Cluster cluster;
+
+        private LeaderNeverLoadSnapshot(Cluster cluster) {
+            this.cluster = cluster;
+        }
 
         @Override
         public void verify() {
@@ -1311,8 +1337,7 @@ public class RaftEventSimulationTest {
                         node.intSerde,
                         BufferSupplier.create(),
                         Integer.MAX_VALUE,
-                        true,
-                        node.logContext()
+                        true
                     )
                 ) {
                     // Since the state machine is only on e value we only expect one data record in the snapshot
@@ -1340,15 +1365,15 @@ public class RaftEventSimulationTest {
             });
 
             for (LogBatch batch : log.readBatches(startOffset.get(), highWatermark)) {
-                if (batch.isControlBatch()) {
+                if (batch.isControlBatch) {
                     continue;
                 }
 
-                for (LogEntry entry : batch.entries()) {
-                    long offset = entry.offset();
+                for (LogEntry entry : batch.entries) {
+                    long offset = entry.offset;
                     assertTrue(offset < highWatermark.getAsLong());
 
-                    int sequence = parseSequenceNumber(entry.record().value().duplicate());
+                    int sequence = parseSequenceNumber(entry.record.value().duplicate());
                     committedSequenceNumbers.putIfAbsent(offset, sequence);
 
                     int committedSequence = committedSequenceNumbers.get(offset);
