@@ -19,10 +19,6 @@ package org.apache.kafka.raft;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.compress.Compression;
-import org.apache.kafka.common.errors.UnsupportedVersionException;
-import org.apache.kafka.common.message.AddRaftVoterRequestData;
-import org.apache.kafka.common.message.AddRaftVoterRequestDataJsonConverter;
-import org.apache.kafka.common.message.AddRaftVoterResponseData;
 import org.apache.kafka.common.message.BeginQuorumEpochRequestData;
 import org.apache.kafka.common.message.BeginQuorumEpochRequestDataJsonConverter;
 import org.apache.kafka.common.message.BeginQuorumEpochResponseData;
@@ -43,7 +39,6 @@ import org.apache.kafka.common.message.FetchSnapshotRequestData;
 import org.apache.kafka.common.message.FetchSnapshotRequestDataJsonConverter;
 import org.apache.kafka.common.message.FetchSnapshotResponseData;
 import org.apache.kafka.common.message.FetchSnapshotResponseDataJsonConverter;
-import org.apache.kafka.common.message.RemoveRaftVoterResponseData;
 import org.apache.kafka.common.message.VoteRequestData;
 import org.apache.kafka.common.message.VoteRequestDataJsonConverter;
 import org.apache.kafka.common.message.VoteResponseData;
@@ -56,7 +51,6 @@ import org.apache.kafka.common.record.MemoryRecordsBuilder;
 import org.apache.kafka.common.record.Records;
 import org.apache.kafka.common.record.TimestampType;
 import org.apache.kafka.common.security.auth.SecurityProtocol;
-import org.apache.kafka.server.common.OffsetAndEpoch;
 
 import com.fasterxml.jackson.databind.JsonNode;
 
@@ -67,12 +61,12 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
-import java.util.List;
-import java.util.Map;
+import java.util.Collections;
 import java.util.stream.Stream;
 
+import static java.util.Collections.singletonList;
+import static java.util.Collections.singletonMap;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class RaftUtilTest {
@@ -96,10 +90,6 @@ public class RaftUtilTest {
                 RaftUtil.errorResponse(ApiKeys.FETCH, Errors.NONE));
         assertEquals(new FetchSnapshotResponseData().setErrorCode(Errors.NONE.code()),
                 RaftUtil.errorResponse(ApiKeys.FETCH_SNAPSHOT, Errors.NONE));
-        assertEquals(new AddRaftVoterResponseData().setErrorCode(Errors.NONE.code()),
-            RaftUtil.errorResponse(ApiKeys.ADD_RAFT_VOTER, Errors.NONE));
-        assertEquals(new RemoveRaftVoterResponseData().setErrorCode(Errors.NONE.code()),
-            RaftUtil.errorResponse(ApiKeys.REMOVE_RAFT_VOTER, Errors.NONE));
         assertThrows(IllegalArgumentException.class, () -> RaftUtil.errorResponse(ApiKeys.PRODUCE, Errors.NONE));
     }
 
@@ -351,29 +341,6 @@ public class RaftUtilTest {
         assertEquals(testCase.expectedJson, json.toString());
     }
 
-    // Test that the replicaDirectoryId field introduced in version 17 is ignorable for older versions.
-    // This is done by setting a FetchPartition's replicaDirectoryId explicitly to a non-zero uuid and
-    // checking that the FetchRequestData can still be written to an older version specified by
-    // testCase.version.
-    @ParameterizedTest
-    @MethodSource("singletonFetchRequestTestCases")
-    public void testFetchRequestV17Compatibility(final FetchRequestTestCase testCase) {
-        FetchRequestData fetchRequestData = RaftUtil.singletonFetchRequest(
-            topicPartition,
-            Uuid.ONE_UUID,
-            partition -> partition
-                .setPartitionMaxBytes(10)
-                .setCurrentLeaderEpoch(5)
-                .setFetchOffset(333)
-                .setLastFetchedEpoch(testCase.lastFetchedEpoch)
-                .setPartition(2)
-                .setReplicaDirectoryId(Uuid.ONE_UUID)
-                .setLogStartOffset(0)
-        );
-        JsonNode json = FetchRequestDataJsonConverter.write(fetchRequestData, testCase.version);
-        assertEquals(testCase.expectedJson, json.toString());
-    }
-
     @ParameterizedTest
     @MethodSource("singletonFetchResponseTestCases")
     public void testSingletonFetchResponseForAllVersion(final FetchResponseTestCase testCase) {
@@ -402,7 +369,7 @@ public class RaftUtilTest {
                         .setSnapshotId(new FetchResponseData.SnapshotId())
                         .setErrorCode(Errors.NONE.code())
                         .setCurrentLeader(new FetchResponseData.LeaderIdAndEpoch())
-                        .setAbortedTransactions(List.of(
+                        .setAbortedTransactions(singletonList(
                                 new FetchResponseData.AbortedTransaction()
                                         .setProducerId(producerId)
                                         .setFirstOffset(firstOffset)
@@ -449,7 +416,7 @@ public class RaftUtilTest {
                 leaderEpoch,
                 leaderId,
                 true,
-                Endpoints.fromInetSocketAddresses(Map.of(listenerName, address))
+                Endpoints.fromInetSocketAddresses(singletonMap(listenerName, address))
         );
         JsonNode json = VoteResponseDataJsonConverter.write(voteResponseData, version);
         assertEquals(expectedJson, json.toString());
@@ -477,35 +444,6 @@ public class RaftUtilTest {
         assertEquals(expectedJson, json.toString());
     }
 
-    // Test that the replicaDirectoryId field introduced in version 1 is ignorable for version 0
-    // This is done by setting a FetchPartition's replicaDirectoryId explicitly to a non-zero uuid and
-    // checking that the FetchSnapshotRequestData can still be written to an older version specified by
-    // testCase.version.
-    @ParameterizedTest
-    @MethodSource("fetchSnapshotRequestTestCases")
-    public void testSingletonFetchSnapshotRequestV1Compatibility(
-        short version,
-        Uuid directoryId,
-        String expectedJson
-    ) {
-        int epoch = 1;
-        int maxBytes = 1000;
-        int position = 10;
-
-        FetchSnapshotRequestData fetchSnapshotRequestData = RaftUtil.singletonFetchSnapshotRequest(
-            clusterId,
-            ReplicaKey.of(1, directoryId),
-            topicPartition,
-            epoch,
-            new OffsetAndEpoch(10, epoch),
-            maxBytes,
-            position
-        );
-        fetchSnapshotRequestData.topics().get(0).partitions().get(0).setReplicaDirectoryId(Uuid.ONE_UUID);
-        JsonNode json = FetchSnapshotRequestDataJsonConverter.write(fetchSnapshotRequestData, version);
-        assertEquals(expectedJson, json.toString());
-    }
-
     @ParameterizedTest
     @MethodSource("fetchSnapshotResponseTestCases")
     public void testSingletonFetchSnapshotResponseForAllVersion(final short version, final String expectedJson) {
@@ -516,7 +454,7 @@ public class RaftUtilTest {
                 version,
                 topicPartition,
                 leaderId,
-                Endpoints.fromInetSocketAddresses(Map.of(listenerName, address)),
+                Endpoints.fromInetSocketAddresses(singletonMap(listenerName, address)),
                 responsePartitionSnapshot -> responsePartitionSnapshot
         );
 
@@ -535,7 +473,7 @@ public class RaftUtilTest {
                 clusterId,
                 leaderEpoch,
                 leaderId,
-                Endpoints.fromInetSocketAddresses(Map.of(listenerName, address)),
+                Endpoints.fromInetSocketAddresses(singletonMap(listenerName, address)),
                 ReplicaKey.of(1, Uuid.ONE_UUID)
         );
         JsonNode json = BeginQuorumEpochRequestDataJsonConverter.write(beginQuorumEpochRequestData, version);
@@ -556,7 +494,7 @@ public class RaftUtilTest {
                 Errors.NONE,
                 leaderEpoch,
                 leaderId,
-                Endpoints.fromInetSocketAddresses(Map.of(listenerName, address))
+                Endpoints.fromInetSocketAddresses(singletonMap(listenerName, address))
         );
         JsonNode json = BeginQuorumEpochResponseDataJsonConverter.write(beginQuorumEpochResponseData, version);
         assertEquals(expectedJson, json.toString());
@@ -573,7 +511,7 @@ public class RaftUtilTest {
                 clusterId,
                 leaderEpoch,
                 leaderId,
-                List.of(ReplicaKey.of(1, Uuid.ONE_UUID))
+                singletonList(ReplicaKey.of(1, Uuid.ONE_UUID))
         );
         JsonNode json = EndQuorumEpochRequestDataJsonConverter.write(endQuorumEpochRequestData, version);
         assertEquals(expectedJson, json.toString());
@@ -593,7 +531,7 @@ public class RaftUtilTest {
                 Errors.NONE,
                 leaderEpoch,
                 leaderId,
-                Endpoints.fromInetSocketAddresses(Map.of(listenerName, address))
+                Endpoints.fromInetSocketAddresses(singletonMap(listenerName, address))
         );
         JsonNode json = EndQuorumEpochResponseDataJsonConverter.write(endQuorumEpochResponseData, version);
         assertEquals(expectedJson, json.toString());
@@ -623,52 +561,12 @@ public class RaftUtilTest {
                 leaderId,
                 leaderEpoch,
                 highWatermark,
-                List.of(replicaState),
-                List.of(replicaState),
+                Collections.singletonList(replicaState),
+                Collections.singletonList(replicaState),
                 0
         );
         JsonNode json = DescribeQuorumResponseDataJsonConverter.write(describeQuorumResponseData, version);
         assertEquals(expectedJson, json.toString());
-    }
-
-    @Test
-    public void testAddRaftVoterRequestAckWhenCommittedNotIgnorable() {
-        AddRaftVoterRequestData request = new AddRaftVoterRequestData()
-            .setClusterId("test-cluster")
-            .setTimeoutMs(1000)
-            .setVoterId(1)
-            .setVoterDirectoryId(Uuid.randomUuid())
-            .setAckWhenCommitted(false); // field only exists in v1+
-
-        // Attempt to serialize to version 0, which does not support ackWhenCommitted
-        assertThrows(
-            UnsupportedVersionException.class,
-            () -> AddRaftVoterRequestDataJsonConverter.write(request, (short) 0)
-        );
-    }
-
-    @Test
-    public void testAddVoterResponse() {
-        for (Errors error : Errors.values()) {
-            AddRaftVoterResponseData addRaftVoterResponseData = RaftUtil.addVoterResponse(error, null);
-            assertEquals(error.code(), addRaftVoterResponseData.errorCode());
-            if (Errors.NONE.equals(error))
-                assertNull(addRaftVoterResponseData.errorMessage());
-            else
-                assertEquals(error.message(), addRaftVoterResponseData.errorMessage());
-        }
-    }
-
-    @Test
-    public void testRemoveVoterResponse() {
-        for (Errors error : Errors.values()) {
-            RemoveRaftVoterResponseData removeRaftVoterResponseData = RaftUtil.removeVoterResponse(error, null);
-            assertEquals(error.code(), removeRaftVoterResponseData.errorCode());
-            if (Errors.NONE.equals(error))
-                assertNull(removeRaftVoterResponseData.errorMessage());
-            else
-                assertEquals(error.message(), removeRaftVoterResponseData.errorMessage());
-        }
     }
 
     private Records createRecords() {
@@ -685,10 +583,32 @@ public class RaftUtilTest {
         }
     }
 
-    private record FetchRequestTestCase(Uuid replicaDirectoryId, short version, short lastFetchedEpoch,
-                                        String expectedJson) {
+    private static class FetchRequestTestCase {
+        private final Uuid replicaDirectoryId;
+        private final short version;
+        private final short lastFetchedEpoch;
+        private final String expectedJson;
+
+        private FetchRequestTestCase(Uuid replicaDirectoryId, short version,
+                                     short lastFetchedEpoch, String expectedJson) {
+            this.replicaDirectoryId = replicaDirectoryId;
+            this.version = version;
+            this.lastFetchedEpoch = lastFetchedEpoch;
+            this.expectedJson = expectedJson;
+        }
     }
 
-    private record FetchResponseTestCase(short version, int preferredReadReplicaId, String expectedJson) {
+    private static class FetchResponseTestCase {
+        private final short version;
+        private final int preferredReadReplicaId;
+        private final String expectedJson;
+
+        private FetchResponseTestCase(short version,
+                                      int preferredReadReplicaId,
+                                      String expectedJson) {
+            this.version = version;
+            this.preferredReadReplicaId = preferredReadReplicaId;
+            this.expectedJson = expectedJson;
+        }
     }
 }
