@@ -28,6 +28,8 @@ import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.nio.ByteBuffer;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -58,7 +60,7 @@ class BatchBuilderTest {
             buffer.limit()
         );
 
-        List<String> records = List.of(
+        List<String> records = Arrays.asList(
             "a",
             "ap",
             "app",
@@ -68,7 +70,7 @@ class BatchBuilderTest {
 
         records.forEach(record -> builder.appendRecord(record, null));
         MemoryRecords builtRecordSet = builder.build();
-        assertTrue(builder.bytesNeeded(List.of("a"), null).isPresent());
+        assertTrue(builder.bytesNeeded(Collections.singletonList("a"), null).isPresent());
         assertThrows(IllegalStateException.class, () -> builder.appendRecord("a", null));
 
         List<MutableRecordBatch> builtBatches = Utils.toList(builtRecordSet.batchIterator());
@@ -110,7 +112,7 @@ class BatchBuilderTest {
 
         String record = "i am a record";
 
-        while (builder.bytesNeeded(List.of(record), null).isEmpty()) {
+        while (builder.bytesNeeded(Collections.singletonList(record), null).isEmpty()) {
             builder.appendRecord(record, null);
         }
 
