@@ -23,7 +23,6 @@ import org.apache.kafka.common.record.FileRecords;
 import org.apache.kafka.common.record.MemoryRecords;
 import org.apache.kafka.common.record.Records;
 import org.apache.kafka.common.utils.BufferSupplier;
-import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.raft.BatchReader;
 import org.apache.kafka.raft.ControlRecord;
 import org.apache.kafka.raft.internals.RecordsIteratorTest.TestBatch;
@@ -80,7 +79,7 @@ class RecordsBatchReaderTest {
     public void testLeaderChangeControlBatch() {
         // Confirm that the RecordsBatchReader is able to iterate over control batches
         MemoryRecords records = RecordsIteratorTest.buildControlRecords(ControlRecordType.LEADER_CHANGE);
-        ControlRecord expectedRecord = ControlRecord.of(new LeaderChangeMessage());
+        ControlRecord expectedRecord = new ControlRecord(ControlRecordType.LEADER_CHANGE, new LeaderChangeMessage());
 
         try (RecordsBatchReader<String> reader = RecordsBatchReader.of(
                 0,
@@ -89,12 +88,11 @@ class RecordsBatchReaderTest {
                 BufferSupplier.NO_CACHING,
                 MAX_BATCH_BYTES,
                 ignore -> { },
-                true,
-                new LogContext()
+                true
             )
         ) {
             assertTrue(reader.hasNext());
-            assertEquals(List.of(expectedRecord), reader.next().controlRecords());
+            assertEquals(Collections.singletonList(expectedRecord), reader.next().controlRecords());
             assertFalse(reader.hasNext());
         }
     }
@@ -130,8 +128,7 @@ class RecordsBatchReaderTest {
             bufferSupplier,
             MAX_BATCH_BYTES,
             closeListener,
-            true,
-            new LogContext()
+            true
         );
         try {
             for (TestBatch<String> batch : expectedBatches) {
@@ -146,6 +143,6 @@ class RecordsBatchReaderTest {
         }
 
         Mockito.verify(closeListener).onClose(reader);
-        assertEquals(Set.of(), allocatedBuffers);
+        assertEquals(Collections.emptySet(), allocatedBuffers);
     }
 }
