@@ -25,7 +25,7 @@ import org.apache.kafka.server.log.remote.storage.RemoteResourceNotFoundExceptio
 import org.apache.kafka.server.log.remote.storage.RemoteStorageException;
 import org.apache.kafka.server.log.remote.storage.RemoteStorageManager;
 import org.apache.kafka.server.log.remote.storage.RemoteStorageManager.IndexType;
-import org.apache.kafka.server.util.KafkaScheduler;
+import org.apache.kafka.server.util.ShutdownableThread;
 
 import com.github.benmanes.caffeine.cache.Cache;
 import com.github.benmanes.caffeine.cache.Caffeine;
@@ -44,12 +44,14 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.function.Function;
 import java.util.stream.Stream;
@@ -91,13 +93,17 @@ public class RemoteIndexCache implements Closeable {
     private final AtomicBoolean isRemoteIndexCacheClosed = new AtomicBoolean(false);
 
     /**
+     * Unbounded queue containing the removed entries from the cache which are waiting to be garbage collected.
+     */
+    private final LinkedBlockingQueue<Entry> expiredIndexes = new LinkedBlockingQueue<>();
+
+    /**
      * Lock used to synchronize close with other read operations. This ensures that when we close, we don't have any other
      * concurrent reads in-progress.
      */
-    private final ReadWriteLock lock = new ReentrantReadWriteLock();
+    private final ReentrantReadWriteLock lock = new ReentrantReadWriteLock();
     private final RemoteStorageManager remoteStorageManager;
-    private final KafkaScheduler cleanerScheduler = new KafkaScheduler(1, true, REMOTE_LOG_INDEX_CACHE_CLEANER_THREAD);
-    private int fileDeleteDelayMs = 10_000;
+    private final ShutdownableThread cleanerThread;
 
     /**
      * Actual cache implementation that this file wraps around.
@@ -125,7 +131,10 @@ public class RemoteIndexCache implements Closeable {
 
         internalCache = initEmptyCache(maxSize);
         init();
-        cleanerScheduler.startup();
+
+        // Start cleaner thread that will clean the expired entries.
+        cleanerThread = createCleanerThread();
+        cleanerThread.start();
     }
 
     public void resizeCacheSize(long remoteLogIndexFileCacheSize) {
@@ -141,7 +150,9 @@ public class RemoteIndexCache implements Closeable {
     private Cache<Uuid, Entry> initEmptyCache(long maxSize) {
         return Caffeine.newBuilder()
                 .maximumWeight(maxSize)
-                .weigher((Uuid key, Entry entry) -> (int) entry.entrySizeBytes)
+                .weigher((Uuid key, Entry entry) -> {
+                    return (int) entry.entrySizeBytes;
+                })
                 // This listener is invoked each time an entry is being automatically removed due to eviction. The cache will invoke this listener
                 // during the atomic operation to remove the entry (refer: https://github.com/ben-manes/caffeine/wiki/Removal),
                 // hence, care must be taken to ensure that this operation is not expensive. Note that this listener is not invoked when
@@ -151,25 +162,24 @@ public class RemoteIndexCache implements Closeable {
                 .evictionListener((Uuid key, Entry entry, RemovalCause cause) -> {
                     // Mark the entries for cleanup and add them to the queue to be garbage collected later by the background thread.
                     if (entry != null) {
-                        enqueueEntryForCleanup(entry);
+                        enqueueEntryForCleanup(entry, key);
                     } else {
                         log.error("Received entry as null for key {} when the it is removed from the cache.", key);
                     }
                 }).build();
     }
 
-    // Visible for testing
-    int expiredIdxPendingForDeletion() {
-        return cleanerScheduler.pendingTaskSize();
+    public Collection<Entry> expiredIndexes() {
+        return Collections.unmodifiableCollection(expiredIndexes);
     }
 
     // Visible for testing
-    Cache<Uuid, Entry> internalCache() {
+    public Cache<Uuid, Entry> internalCache() {
         return internalCache;
     }
 
     // Visible for testing
-    File cacheDir() {
+    public File cacheDir() {
         return cacheDir;
     }
 
@@ -177,7 +187,7 @@ public class RemoteIndexCache implements Closeable {
         lock.readLock().lock();
         try {
             internalCache.asMap().computeIfPresent(key, (k, v) -> {
-                enqueueEntryForCleanup(v);
+                enqueueEntryForCleanup(v, k);
                 // Returning null to remove the key from the cache
                 return null;
             });
@@ -190,9 +200,7 @@ public class RemoteIndexCache implements Closeable {
         lock.readLock().lock();
         try {
             keys.forEach(key -> internalCache.asMap().computeIfPresent(key, (k, v) -> {
-                // Mark then entry for cleanup before removing it from the cache to avoid contention with the
-                // next fetch for the same key.
-                enqueueEntryForCleanup(v);
+                enqueueEntryForCleanup(v, k);
                 // Returning null to remove the key from the cache
                 return null;
             }));
@@ -201,31 +209,46 @@ public class RemoteIndexCache implements Closeable {
         }
     }
 
-    private void enqueueEntryForCleanup(Entry entry) {
+    private void enqueueEntryForCleanup(Entry entry, Uuid key) {
         try {
             entry.markForCleanup();
-            Runnable runnable = () -> {
-                try {
-                    entry.cleanup();
-                    log.debug("Cleaned up index entry {}", entry);
-                } catch (Exception ex) {
-                    log.error("Error occurred while cleaning up expired entry: {}", entry, ex);
-                }
-            };
-            cleanerScheduler.scheduleOnce("delete-index", runnable, fileDeleteDelayMs);
+            if (!expiredIndexes.offer(entry)) {
+                log.error("Error while inserting entry {} for key {} into the cleaner queue because queue is full.", entry, key);
+            }
         } catch (IOException e) {
             throw new KafkaException(e);
         }
     }
 
     // Visible for testing
-    void setFileDeleteDelayMs(int fileDeleteDelayMs) {
-        this.fileDeleteDelayMs = fileDeleteDelayMs;
+    public ShutdownableThread cleanerThread() {
+        return cleanerThread;
     }
 
-    // Visible for testing
-    KafkaScheduler cleanerScheduler() {
-        return cleanerScheduler;
+    private ShutdownableThread createCleanerThread() {
+        ShutdownableThread thread = new ShutdownableThread(REMOTE_LOG_INDEX_CACHE_CLEANER_THREAD) {
+            public void doWork() {
+                try {
+                    Entry entry = expiredIndexes.take();
+                    log.debug("Cleaning up index entry {}", entry);
+                    entry.cleanup();
+                } catch (InterruptedException ie) {
+                    // cleaner thread should only be interrupted when cache is being closed, else it's an error
+                    if (!isRemoteIndexCacheClosed.get()) {
+                        log.error("Cleaner thread received interruption but remote index cache is not closed", ie);
+                        // propagate the InterruptedException outside to correctly close the thread.
+                        throw new KafkaException(ie);
+                    } else {
+                        log.debug("Cleaner thread was interrupted on cache shutdown");
+                    }
+                } catch (Exception ex) {
+                    // do not exit for exceptions other than InterruptedException
+                    log.error("Error occurred while cleaning up expired entry", ex);
+                }
+            }
+        };
+        thread.setDaemon(true);
+        return thread;
     }
 
     private void init() throws IOException {
@@ -244,9 +267,8 @@ public class RemoteIndexCache implements Closeable {
         // Delete any .deleted or .tmp files remained from the earlier run of the broker.
         try (Stream<Path> paths = Files.list(cacheDir.toPath())) {
             paths.forEach(path -> {
-                String filename = path.getFileName().toString();
-                if (filename.endsWith(LogFileUtils.DELETED_FILE_SUFFIX) ||
-                        filename.endsWith(TMP_FILE_SUFFIX)) {
+                if (path.endsWith(LogFileUtils.DELETED_FILE_SUFFIX) ||
+                        path.endsWith(TMP_FILE_SUFFIX)) {
                     try {
                         if (Files.deleteIfExists(path)) {
                             log.debug("Deleted file path {} on cache initialization", path);
@@ -295,7 +317,7 @@ public class RemoteIndexCache implements Closeable {
                         internalCache.put(uuid, entry);
                     } else {
                         // Delete all of them if any one of those indexes is not available for a specific segment id
-                        tryAll(List.of(
+                        tryAll(Arrays.asList(
                                 () -> {
                                     Files.deleteIfExists(offsetIndexFile.toPath());
                                     return null;
@@ -315,8 +337,7 @@ public class RemoteIndexCache implements Closeable {
         log.info("RemoteIndexCache starts up in {} ms.", Time.SYSTEM.hiResClockMs() - start);
     }
 
-    private <T> T loadIndexFile(File file,
-                                RemoteLogSegmentMetadata remoteLogSegmentMetadata,
+    private <T> T loadIndexFile(File file, RemoteLogSegmentMetadata remoteLogSegmentMetadata,
                                 Function<RemoteLogSegmentMetadata, InputStream> fetchRemoteIndex,
                                 Function<File, T> readIndex) throws IOException {
         File indexFile = new File(cacheDir, file.getName());
@@ -339,22 +360,23 @@ public class RemoteIndexCache implements Closeable {
         return index;
     }
 
-    public Entry getIndexEntry(RemoteLogSegmentMetadata metadata) {
-        Uuid uuid = metadata.remoteLogSegmentId().id();
-        throwIfCacheClosed(uuid);
+    public Entry getIndexEntry(RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
+        if (isRemoteIndexCacheClosed.get()) {
+            throw new IllegalStateException("Unable to fetch index for " +
+                    "segment id=" + remoteLogSegmentMetadata.remoteLogSegmentId().id() + ". Instance is already closed.");
+        }
         lock.readLock().lock();
         try {
-            throwIfCacheClosed(uuid);
-            return internalCache.get(uuid, k -> createCacheEntry(metadata));
+            // while this thread was waiting for lock, another thread may have changed the value of isRemoteIndexCacheClosed.
+            // check for index close again
+            if (isRemoteIndexCacheClosed.get()) {
+                throw new IllegalStateException("Unable to fetch index for segment-id = "
+                        + remoteLogSegmentMetadata.remoteLogSegmentId().id() + ". Index instance is already closed.");
+            }
+            return internalCache.get(remoteLogSegmentMetadata.remoteLogSegmentId().id(),
+                    uuid -> createCacheEntry(remoteLogSegmentMetadata));
         } finally {
             lock.readLock().unlock();
-        }
-    }
-
-    private void throwIfCacheClosed(Uuid uuid) {
-        if (isRemoteIndexCacheClosed.get()) {
-            throw new IllegalStateException("Unable to fetch index for segment-id = " + uuid +
-                    ". RemoteIndexCache is closed.");
         }
     }
 
@@ -423,7 +445,7 @@ public class RemoteIndexCache implements Closeable {
     public int lookupOffset(RemoteLogSegmentMetadata remoteLogSegmentMetadata, long offset) {
         lock.readLock().lock();
         try {
-            return getIndexEntry(remoteLogSegmentMetadata).lookupOffset(offset).position();
+            return getIndexEntry(remoteLogSegmentMetadata).lookupOffset(offset).position;
         } finally {
             lock.readLock().unlock();
         }
@@ -432,7 +454,7 @@ public class RemoteIndexCache implements Closeable {
     public int lookupTimestamp(RemoteLogSegmentMetadata remoteLogSegmentMetadata, long timestamp, long startingOffset) {
         lock.readLock().lock();
         try {
-            return getIndexEntry(remoteLogSegmentMetadata).lookupTimestamp(timestamp, startingOffset).position();
+            return getIndexEntry(remoteLogSegmentMetadata).lookupTimestamp(timestamp, startingOffset).position;
         } finally {
             lock.readLock().unlock();
         }
@@ -446,12 +468,16 @@ public class RemoteIndexCache implements Closeable {
             lock.writeLock().lock();
             try {
                 log.info("Close initiated for RemoteIndexCache. Cache stats={}. Cache entries pending delete={}",
-                        internalCache.stats(), expiredIdxPendingForDeletion());
-                cleanerScheduler.shutdown();
+                        internalCache.stats(), expiredIndexes.size());
+                // Initiate shutdown for cleaning thread
+                boolean shutdownRequired = cleanerThread.initiateShutdown();
                 // Close all the opened indexes to force unload mmap memory. This does not delete the index files from disk.
+                internalCache.asMap().forEach((uuid, entry) -> entry.close());
+                // wait for cleaner thread to shutdown
+                if (shutdownRequired) cleanerThread.awaitShutdown();
+
                 // Note that internal cache does not require explicit cleaning/closing. We don't want to invalidate or cleanup
                 // the cache as both would lead to triggering of removal listener.
-                internalCache.asMap().forEach((uuid, entry) -> entry.close());
                 log.info("Close completed for RemoteIndexCache");
             } catch (InterruptedException e) {
                 throw new KafkaException(e);
@@ -486,30 +512,32 @@ public class RemoteIndexCache implements Closeable {
             this.entrySizeBytes = estimatedEntrySize();
         }
 
+        // Visible for testing
         public OffsetIndex offsetIndex() {
             return offsetIndex;
         }
 
+        // Visible for testing
         public TimeIndex timeIndex() {
             return timeIndex;
         }
 
+        // Visible for testing
         public TransactionIndex txnIndex() {
             return txnIndex;
         }
 
         // Visible for testing
-        boolean isCleanStarted() {
+        public boolean isCleanStarted() {
             return cleanStarted;
         }
 
         // Visible for testing
-        boolean isMarkedForCleanup() {
+        public boolean isMarkedForCleanup() {
             return markedForCleanup;
         }
 
-        // Visible for testing
-        long entrySizeBytes() {
+        public long entrySizeBytes() {
             return entrySizeBytes;
         }
 
@@ -528,9 +556,8 @@ public class RemoteIndexCache implements Closeable {
         public OffsetPosition lookupOffset(long targetOffset) {
             entryLock.readLock().lock();
             try {
-                if (cleanStarted)
-                    throw new IllegalStateException("This entry is marked for cleanup");
-                return offsetIndex.lookup(targetOffset);
+                if (markedForCleanup) throw new IllegalStateException("This entry is marked for cleanup");
+                else return offsetIndex.lookup(targetOffset);
             } finally {
                 entryLock.readLock().unlock();
             }
@@ -539,16 +566,16 @@ public class RemoteIndexCache implements Closeable {
         public OffsetPosition lookupTimestamp(long timestamp, long startingOffset) {
             entryLock.readLock().lock();
             try {
-                if (cleanStarted)
-                    throw new IllegalStateException("This entry is marked for cleanup");
+                if (markedForCleanup) throw new IllegalStateException("This entry is marked for cleanup");
+
                 TimestampOffset timestampOffset = timeIndex.lookup(timestamp);
-                return offsetIndex.lookup(Math.max(startingOffset, timestampOffset.offset()));
+                return offsetIndex.lookup(Math.max(startingOffset, timestampOffset.offset));
             } finally {
                 entryLock.readLock().unlock();
             }
         }
 
-        void markForCleanup() throws IOException {
+        public void markForCleanup() throws IOException {
             entryLock.writeLock().lock();
             try {
                 if (!markedForCleanup) {
@@ -562,13 +589,15 @@ public class RemoteIndexCache implements Closeable {
             }
         }
 
-        void cleanup() throws IOException {
+        public void cleanup() throws IOException {
             entryLock.writeLock().lock();
             try {
+                markForCleanup();
                 // no-op if clean is done already
-                if (!cleanStarted && isMarkedForCleanup()) {
+                if (!cleanStarted) {
                     cleanStarted = true;
-                    List<StorageAction<Void, Exception>> actions = List.of(() -> {
+
+                    List<StorageAction<Void, Exception>> actions = Arrays.asList(() -> {
                         offsetIndex.deleteIfExists();
                         return null;
                     }, () -> {
@@ -578,6 +607,7 @@ public class RemoteIndexCache implements Closeable {
                         txnIndex.deleteIfExists();
                         return null;
                     });
+
                     tryAll(actions);
                 }
             } finally {
@@ -673,28 +703,34 @@ public class RemoteIndexCache implements Closeable {
         return startOffset + "_" + segmentId.toString();
     }
 
-    static File remoteOffsetIndexFile(File dir, RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
+    public static File remoteOffsetIndexFile(File dir, RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
         return new File(dir, remoteOffsetIndexFileName(remoteLogSegmentMetadata));
     }
 
-    static String remoteOffsetIndexFileName(RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
+    public static String remoteOffsetIndexFileName(RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
         String prefix = generateFileNamePrefixForIndex(remoteLogSegmentMetadata);
         return prefix + LogFileUtils.INDEX_FILE_SUFFIX;
     }
 
-    static File remoteTimeIndexFile(File dir, RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
+    public static File remoteTimeIndexFile(File dir, RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
         return new File(dir, remoteTimeIndexFileName(remoteLogSegmentMetadata));
     }
 
-    static String remoteTimeIndexFileName(RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
+    public static String remoteTimeIndexFileName(RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
         return generateFileNamePrefixForIndex(remoteLogSegmentMetadata) + TIME_INDEX_FILE_SUFFIX;
     }
 
-    static File remoteTransactionIndexFile(File dir, RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
+    public static File remoteTransactionIndexFile(File dir, RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
         return new File(dir, remoteTransactionIndexFileName(remoteLogSegmentMetadata));
     }
 
-    static String remoteTransactionIndexFileName(RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
+    public static String remoteTransactionIndexFileName(RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
         return generateFileNamePrefixForIndex(remoteLogSegmentMetadata) + LogFileUtils.TXN_INDEX_FILE_SUFFIX;
     }
+
+    // Visible for testing
+    public static String remoteDeletedSuffixIndexFileName(RemoteLogSegmentMetadata remoteLogSegmentMetadata) {
+        return generateFileNamePrefixForIndex(remoteLogSegmentMetadata) + LogFileUtils.DELETED_FILE_SUFFIX;
+    }
+
 }
