@@ -22,8 +22,6 @@ import org.apache.kafka.clients.admin.AdminClientConfig;
 import org.apache.kafka.clients.consumer.Consumer;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
-import org.apache.kafka.clients.consumer.internals.AsyncKafkaConsumer;
-import org.apache.kafka.clients.consumer.internals.StreamsRebalanceData;
 import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.Producer;
 import org.apache.kafka.common.Metric;
@@ -48,15 +46,8 @@ import org.apache.kafka.streams.StreamsConfig;
 import org.apache.kafka.streams.Topology;
 import org.apache.kafka.streams.integration.utils.EmbeddedKafkaCluster;
 import org.apache.kafka.streams.integration.utils.IntegrationTestUtils;
-import org.apache.kafka.streams.internals.ConsumerWrapper;
 import org.apache.kafka.streams.kstream.Consumed;
 import org.apache.kafka.streams.kstream.Produced;
-import org.apache.kafka.streams.processor.api.Processor;
-import org.apache.kafka.streams.processor.api.ProcessorContext;
-import org.apache.kafka.streams.processor.api.Record;
-import org.apache.kafka.streams.state.KeyValueIterator;
-import org.apache.kafka.streams.state.KeyValueStore;
-import org.apache.kafka.streams.state.Stores;
 import org.apache.kafka.test.TestUtils;
 import org.apache.kafka.tools.ClientMetricsCommand;
 
@@ -79,13 +70,13 @@ import java.io.IOException;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.apache.kafka.common.utils.Utils.mkEntry;
@@ -106,30 +97,17 @@ public class KafkaStreamsTelemetryIntegrationTest {
     private String outputTopicTwoPartitions;
     private String inputTopicOnePartition;
     private String outputTopicOnePartition;
-    private String globalStoreTopic;
-    private Uuid globalStoreConsumerInstanceId;
     private Properties streamsApplicationProperties = new Properties();
     private Properties streamsSecondApplicationProperties = new Properties();
-    private  KeyValueIterator<String, String> globalStoreIterator;
 
     private static EmbeddedKafkaCluster cluster;
-    private static final List<TestingMetricsInterceptor> INTERCEPTING_CONSUMERS = new ArrayList<>();
+    private static final List<TestingMetricsInterceptingConsumer<byte[], byte[]>> INTERCEPTING_CONSUMERS = new ArrayList<>();
     private static final List<TestingMetricsInterceptingAdminClient> INTERCEPTING_ADMIN_CLIENTS = new ArrayList<>();
     private static final int NUM_BROKERS = 3;
     private static final int FIRST_INSTANCE_CLIENT = 0;
     private static final int SECOND_INSTANCE_CLIENT = 1;
     private static final Logger LOG = LoggerFactory.getLogger(KafkaStreamsTelemetryIntegrationTest.class);
 
-    static Stream<Arguments> recordingLevelParameters() {
-        return Stream.of(
-            Arguments.of("INFO", "classic"),
-            Arguments.of("DEBUG", "classic"),
-            Arguments.of("TRACE", "classic"),
-            Arguments.of("INFO", "streams"),
-            Arguments.of("DEBUG", "streams"),
-            Arguments.of("TRACE", "streams")
-        );
-    }
 
     @BeforeAll
     public static void startCluster() throws IOException {
@@ -146,12 +124,10 @@ public class KafkaStreamsTelemetryIntegrationTest {
         outputTopicTwoPartitions = appId + "-output-two";
         inputTopicOnePartition = appId + "-input-one";
         outputTopicOnePartition = appId + "-output-one";
-        globalStoreTopic = appId + "-global-store";
         cluster.createTopic(inputTopicTwoPartitions, 2, 1);
         cluster.createTopic(outputTopicTwoPartitions, 2, 1);
         cluster.createTopic(inputTopicOnePartition, 1, 1);
         cluster.createTopic(outputTopicOnePartition, 1, 1);
-        cluster.createTopic(globalStoreTopic, 2, 1);
     }
 
     @AfterAll
@@ -167,56 +143,15 @@ public class KafkaStreamsTelemetryIntegrationTest {
         if (!streamsSecondApplicationProperties.isEmpty()) {
             IntegrationTestUtils.purgeLocalStreamsState(streamsSecondApplicationProperties);
         }
-        if (globalStoreIterator != null) {
-            globalStoreIterator.close();
-        }
     }
 
     @ParameterizedTest
-    @MethodSource("recordingLevelParameters")
-    public void shouldPushGlobalThreadMetricsToBroker(final String recordingLevel, final String groupProtocol) throws Exception {
-        streamsApplicationProperties = props(groupProtocol);
-        streamsApplicationProperties.put(StreamsConfig.METRICS_RECORDING_LEVEL_CONFIG, recordingLevel);
-        final Topology topology = simpleTopology(true);
-        subscribeForStreamsMetrics();
-        try (final KafkaStreams streams = new KafkaStreams(topology, streamsApplicationProperties)) {
-            IntegrationTestUtils.startApplicationAndWaitUntilRunning(streams);
-            final ClientInstanceIds clientInstanceIds = streams.clientInstanceIds(Duration.ofSeconds(60));
-            for (final Map.Entry<String, Uuid> instanceId : clientInstanceIds.consumerInstanceIds().entrySet()) {
-                final String instanceIdKey = instanceId.getKey();
-                if (instanceIdKey.endsWith("GlobalStreamThread-global-consumer")) {
-                    globalStoreConsumerInstanceId = instanceId.getValue();
-                }
-            }
-
-            assertNotNull(globalStoreConsumerInstanceId);
-            LOG.info("Global consumer instance id {}", globalStoreConsumerInstanceId);
-            TestUtils.waitForCondition(
-                    () -> !TelemetryPlugin.SUBSCRIBED_METRICS.getOrDefault(globalStoreConsumerInstanceId, Collections.emptyList()).isEmpty(),
-                    30_000,
-                    "Never received subscribed metrics"
-            );
-
-            final List<String> expectedGlobalMetrics = streams.metrics().values().stream().map(Metric::metricName)
-                    .filter(metricName -> metricName.tags().containsKey("thread-id") &&
-                            metricName.tags().get("thread-id").endsWith("-GlobalStreamThread")).map(mn -> {
-                                final String name = mn.name().replace('-', '.');
-                                final String group = mn.group().replace("-metrics", "").replace('-', '.');
-                                return "org.apache.kafka." + group + "." + name;
-                            }).filter(name -> !name.equals("org.apache.kafka.stream.thread.state"))// telemetry reporter filters out string metrics
-                    .sorted().toList();
-            final List<String> actualGlobalMetrics = new ArrayList<>(TelemetryPlugin.SUBSCRIBED_METRICS.get(globalStoreConsumerInstanceId));
-            assertEquals(expectedGlobalMetrics, actualGlobalMetrics);
-        }
-    }
-
-    @ParameterizedTest
-    @MethodSource("recordingLevelParameters")
-    public void shouldPushMetricsToBroker(final String recordingLevel, final String groupProtocol) throws Exception {
+    @ValueSource(strings = {"INFO", "DEBUG", "TRACE"})
+    public void shouldPushMetricsToBroker(final String recordingLevel) throws Exception {
         // End-to-end test validating metrics pushed to broker
-        streamsApplicationProperties  = props(groupProtocol);
+        streamsApplicationProperties  = props(true);
         streamsApplicationProperties.put(StreamsConfig.METRICS_RECORDING_LEVEL_CONFIG, recordingLevel);
-        final Topology topology = simpleTopology(false);
+        final Topology topology = simpleTopology();
         subscribeForStreamsMetrics();
         try (final KafkaStreams streams = new KafkaStreams(topology, streamsApplicationProperties)) {
             IntegrationTestUtils.startApplicationAndWaitUntilRunning(streams);
@@ -237,26 +172,22 @@ public class KafkaStreamsTelemetryIntegrationTest {
                     .map(metric -> metric.metricName().tags().get("process-id"))
                     .findFirst().orElseThrow();
 
-            TestUtils.waitForCondition(
-                () -> !TelemetryPlugin.SUBSCRIBED_METRICS.getOrDefault(mainConsumerInstanceId, Collections.emptyList()).isEmpty(),
-                30_000,
-                "Never received subscribed metrics"
-            );
+            TestUtils.waitForCondition(() -> !TelemetryPlugin.SUBSCRIBED_METRICS.get(mainConsumerInstanceId).isEmpty(),
+                    30_000,
+                    "Never received subscribed metrics");
             final List<String> expectedMetrics = streams.metrics().values().stream().map(Metric::metricName)
                     .filter(metricName -> metricName.tags().containsKey("thread-id")).map(mn -> {
                         final String name = mn.name().replace('-', '.');
                         final String group = mn.group().replace("-metrics", "").replace('-', '.');
                         return "org.apache.kafka." + group + "." + name;
                     }).filter(name -> !name.equals("org.apache.kafka.stream.thread.state"))// telemetry reporter filters out string metrics
-                    .sorted().toList();
+                    .sorted().collect(Collectors.toList());
             final List<String> actualMetrics = new ArrayList<>(TelemetryPlugin.SUBSCRIBED_METRICS.get(mainConsumerInstanceId));
             assertEquals(expectedMetrics, actualMetrics);
 
-            TestUtils.waitForCondition(
-                () -> !TelemetryPlugin.SUBSCRIBED_METRICS.getOrDefault(adminInstanceId, Collections.emptyList()).isEmpty(),
-                30_000,
-                "Never received subscribed metrics"
-            );
+            TestUtils.waitForCondition(() -> !TelemetryPlugin.SUBSCRIBED_METRICS.get(adminInstanceId).isEmpty(),
+                    30_000,
+                    "Never received subscribed metrics");
             final List<String> actualInstanceMetrics = TelemetryPlugin.SUBSCRIBED_METRICS.get(adminInstanceId);
             final List<String> expectedInstanceMetrics = Arrays.asList(
                 "org.apache.kafka.stream.alive.stream.threads",
@@ -275,25 +206,25 @@ public class KafkaStreamsTelemetryIntegrationTest {
     }
 
     @ParameterizedTest
-    @MethodSource("topologyComplexityAndRebalanceProtocol")
-    public void shouldPassMetrics(final String topologyType, final String groupProtocol) throws Exception {
+    @MethodSource("singleAndMultiTaskParameters")
+    public void shouldPassMetrics(final String topologyType, final boolean stateUpdaterEnabled) throws Exception {
         // Streams metrics should get passed to Admin and Consumer
-        streamsApplicationProperties = props(groupProtocol);
-        final Topology topology = topologyType.equals("simple") ? simpleTopology(false) : complexTopology();
-
+        streamsApplicationProperties = props(stateUpdaterEnabled);
+        final Topology topology = topologyType.equals("simple") ? simpleTopology() : complexTopology();
+       
         try (final KafkaStreams streams = new KafkaStreams(topology, streamsApplicationProperties)) {
             IntegrationTestUtils.startApplicationAndWaitUntilRunning(streams);
 
             final List<MetricName> streamsThreadMetrics = streams.metrics().values().stream().map(Metric::metricName)
-                    .filter(metricName -> metricName.tags().containsKey("thread-id")).toList();
+                    .filter(metricName -> metricName.tags().containsKey("thread-id")).collect(Collectors.toList());
 
             final List<MetricName> streamsClientMetrics = streams.metrics().values().stream().map(Metric::metricName)
-                    .filter(metricName -> metricName.group().equals("stream-metrics")).toList();
+                    .filter(metricName -> metricName.group().equals("stream-metrics")).collect(Collectors.toList());
 
 
 
-            final List<MetricName> consumerPassedStreamThreadMetricNames = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT).passedMetrics().stream().map(KafkaMetric::metricName).toList();
-            final List<MetricName> adminPassedStreamClientMetricNames = INTERCEPTING_ADMIN_CLIENTS.get(FIRST_INSTANCE_CLIENT).passedMetrics.stream().map(KafkaMetric::metricName).toList();
+            final List<MetricName> consumerPassedStreamThreadMetricNames = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT).passedMetrics.stream().map(KafkaMetric::metricName).collect(Collectors.toList());
+            final List<MetricName> adminPassedStreamClientMetricNames = INTERCEPTING_ADMIN_CLIENTS.get(FIRST_INSTANCE_CLIENT).passedMetrics.stream().map(KafkaMetric::metricName).collect(Collectors.toList());
 
 
             assertEquals(streamsThreadMetrics.size(), consumerPassedStreamThreadMetricNames.size());
@@ -304,28 +235,29 @@ public class KafkaStreamsTelemetryIntegrationTest {
         }
     }
 
-    @Test
-    public void shouldPassCorrectMetricsDynamicInstances() throws Exception {
+    @ParameterizedTest
+    @MethodSource("multiTaskParameters")
+    public void shouldPassCorrectMetricsDynamicInstances(final boolean stateUpdaterEnabled) throws Exception {
         // Correct streams metrics should get passed with dynamic membership
-        streamsApplicationProperties = props("classic");
+        streamsApplicationProperties = props(stateUpdaterEnabled);
         streamsApplicationProperties.put(StreamsConfig.STATE_DIR_CONFIG, TestUtils.tempDirectory(appId).getPath() + "-ks1");
         streamsApplicationProperties.put(StreamsConfig.CLIENT_ID_CONFIG, appId + "-ks1");
 
 
-        streamsSecondApplicationProperties = props("classic");
+        streamsSecondApplicationProperties = props(stateUpdaterEnabled);
         streamsSecondApplicationProperties.put(StreamsConfig.STATE_DIR_CONFIG, TestUtils.tempDirectory(appId).getPath() + "-ks2");
         streamsSecondApplicationProperties.put(StreamsConfig.CLIENT_ID_CONFIG, appId + "-ks2");
-
+        
 
         final Topology topology = complexTopology();
         try (final KafkaStreams streamsOne = new KafkaStreams(topology, streamsApplicationProperties)) {
             IntegrationTestUtils.startApplicationAndWaitUntilRunning(streamsOne);
 
             final List<MetricName> streamsTaskMetricNames = streamsOne.metrics().values().stream().map(Metric::metricName)
-                    .filter(metricName -> metricName.tags().containsKey("task-id")).toList();
+                    .filter(metricName -> metricName.tags().containsKey("task-id")).collect(Collectors.toList());
 
-            final List<MetricName> consumerPassedStreamTaskMetricNames = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT).passedMetrics().stream().map(KafkaMetric::metricName)
-                    .filter(metricName -> metricName.tags().containsKey("task-id")).toList();
+            final List<MetricName> consumerPassedStreamTaskMetricNames = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT).passedMetrics.stream().map(KafkaMetric::metricName)
+                    .filter(metricName -> metricName.tags().containsKey("task-id")).collect(Collectors.toList());
 
             /*
              With only one instance, Kafka Streams should register task metrics for all tasks 0_0, 0_1, 1_0, 1_1
@@ -335,45 +267,38 @@ public class KafkaStreamsTelemetryIntegrationTest {
             assertEquals(streamsTaskMetricNames.size(), consumerPassedStreamTaskMetricNames.size());
             assertEquals(consumerPassedTaskMetricCount, streamsTaskMetricNames.size());
 
+
             try (final KafkaStreams streamsTwo = new KafkaStreams(topology, streamsSecondApplicationProperties)) {
                 streamsTwo.start();
+                waitForCondition(() -> KafkaStreams.State.RUNNING == streamsTwo.state() && KafkaStreams.State.RUNNING == streamsOne.state(),
+                        IntegrationTestUtils.DEFAULT_TIMEOUT,
+                        () -> "Kafka Streams one or two never transitioned to a RUNNING state.");
 
                 /*
                   Now with 2 instances, the tasks will get split amongst both Kafka Streams applications
                  */
-                final List<String> streamOneTaskIds = new ArrayList<>();
-                final List<String> streamTwoTasksIds = new ArrayList<>();
-                waitForCondition(() -> {
-                        streamOneTaskIds.clear();
-                        streamTwoTasksIds.clear();
-
-                        streamOneTaskIds.addAll(getTaskIdsAsStrings(streamsOne));
-                        streamTwoTasksIds.addAll(getTaskIdsAsStrings(streamsTwo));
-
-                        return streamOneTaskIds.size() == 2 && streamTwoTasksIds.size() == 2;
-                    },
-                    "Task assignment did not complete."
-                );
+                final List<String> streamOneTaskIds = getTaskIdsAsStrings(streamsOne);
+                final List<String> streamTwoTasksIds = getTaskIdsAsStrings(streamsTwo);
 
                 final List<MetricName> streamsOneTaskMetrics = streamsOne.metrics().values().stream().map(Metric::metricName)
-                        .filter(metricName -> metricName.tags().containsKey("task-id")).toList();
+                        .filter(metricName -> metricName.tags().containsKey("task-id")).collect(Collectors.toList());
                 final List<MetricName> streamsOneStateMetrics = streamsOne.metrics().values().stream().map(Metric::metricName)
-                        .filter(metricName -> metricName.group().equals("stream-state-metrics")).toList();
+                        .filter(metricName -> metricName.group().equals("stream-state-metrics")).collect(Collectors.toList());
                 
                 final List<MetricName> consumerOnePassedTaskMetrics = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT)
-                        .passedMetrics().stream().map(KafkaMetric::metricName).filter(metricName -> metricName.tags().containsKey("task-id")).toList();
+                        .passedMetrics.stream().map(KafkaMetric::metricName).filter(metricName -> metricName.tags().containsKey("task-id")).collect(Collectors.toList());
                 final List<MetricName> consumerOnePassedStateMetrics = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT)
-                        .passedMetrics().stream().map(KafkaMetric::metricName).filter(metricName -> metricName.group().equals("stream-state-metrics")).toList();
+                        .passedMetrics.stream().map(KafkaMetric::metricName).filter(metricName -> metricName.group().equals("stream-state-metrics")).collect(Collectors.toList());
 
                 final List<MetricName> streamsTwoTaskMetrics = streamsTwo.metrics().values().stream().map(Metric::metricName)
-                        .filter(metricName -> metricName.tags().containsKey("task-id")).toList();
+                        .filter(metricName -> metricName.tags().containsKey("task-id")).collect(Collectors.toList());
                 final List<MetricName> streamsTwoStateMetrics = streamsTwo.metrics().values().stream().map(Metric::metricName)
-                        .filter(metricName -> metricName.group().equals("stream-state-metrics")).toList();
+                        .filter(metricName -> metricName.group().equals("stream-state-metrics")).collect(Collectors.toList());
                 
                 final List<MetricName> consumerTwoPassedTaskMetrics = INTERCEPTING_CONSUMERS.get(SECOND_INSTANCE_CLIENT)
-                        .passedMetrics().stream().map(KafkaMetric::metricName).filter(metricName -> metricName.tags().containsKey("task-id")).toList();
+                        .passedMetrics.stream().map(KafkaMetric::metricName).filter(metricName -> metricName.tags().containsKey("task-id")).collect(Collectors.toList());
                 final List<MetricName> consumerTwoPassedStateMetrics = INTERCEPTING_CONSUMERS.get(SECOND_INSTANCE_CLIENT)
-                        .passedMetrics().stream().map(KafkaMetric::metricName).filter(metricName -> metricName.group().equals("stream-state-metrics")).toList();
+                        .passedMetrics.stream().map(KafkaMetric::metricName).filter(metricName -> metricName.group().equals("stream-state-metrics")).collect(Collectors.toList());
                 /*
                  Confirm pre-existing KafkaStreams instance one only passes metrics for its tasks and has no metrics for previous tasks
                  */
@@ -403,21 +328,20 @@ public class KafkaStreamsTelemetryIntegrationTest {
         }
     }
 
-    @ParameterizedTest
-    @ValueSource(strings = {"classic", "streams"})
-    public void passedMetricsShouldNotLeakIntoClientMetrics(final String groupProtocol) throws Exception {
+    @Test
+    public void passedMetricsShouldNotLeakIntoClientMetrics() throws Exception {
         // Streams metrics should not be visible in client metrics
-        streamsApplicationProperties = props(groupProtocol);
+        streamsApplicationProperties = props(true);
         final Topology topology =  complexTopology();
 
         try (final KafkaStreams streams = new KafkaStreams(topology, streamsApplicationProperties)) {
             IntegrationTestUtils.startApplicationAndWaitUntilRunning(streams);
 
             final List<MetricName> streamsThreadMetrics = streams.metrics().values().stream().map(Metric::metricName)
-                    .filter(metricName -> metricName.tags().containsKey("thread-id")).toList();
+                    .filter(metricName -> metricName.tags().containsKey("thread-id")).collect(Collectors.toList());
 
             final List<MetricName> streamsClientMetrics = streams.metrics().values().stream().map(Metric::metricName)
-                    .filter(metricName -> metricName.group().equals("stream-metrics")).toList();
+                    .filter(metricName -> metricName.group().equals("stream-metrics")).collect(Collectors.toList());
 
             final Map<MetricName, ? extends Metric> embeddedConsumerMetrics = INTERCEPTING_CONSUMERS.get(FIRST_INSTANCE_CLIENT).metrics();
             final Map<MetricName, ? extends Metric> embeddedAdminMetrics = INTERCEPTING_ADMIN_CLIENTS.get(FIRST_INSTANCE_CLIENT).metrics();
@@ -436,26 +360,27 @@ public class KafkaStreamsTelemetryIntegrationTest {
             clientMetricsService.alterClientMetrics(commandOptions);
         }
     }
-
     private List<String> getTaskIdsAsStrings(final KafkaStreams streams) {
         return streams.metadataForLocalThreads().stream()
                 .flatMap(threadMeta -> threadMeta.activeTasks().stream()
                         .map(taskMeta -> taskMeta.taskId().toString()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    private static Stream<Arguments> topologyComplexityAndRebalanceProtocol() {
-        return Stream.of(
-            Arguments.of("simple", "classic"),
-            Arguments.of("complex", "classic"),
-            Arguments.of("simple", "streams")
-        );
+    private static Stream<Arguments> singleAndMultiTaskParameters() {
+        return Stream.of(Arguments.of("simple", true),
+                Arguments.of("simple", false),
+                Arguments.of("complex", true),
+                Arguments.of("complex", false));
     }
 
-    private Properties props(final String groupProtocol) {
-        return props(mkObjectProperties(mkMap(
-            mkEntry(StreamsConfig.GROUP_PROTOCOL_CONFIG, groupProtocol)
-        )));
+    private static Stream<Arguments> multiTaskParameters() {
+        return Stream.of(Arguments.of(true),
+                Arguments.of(false));
+    }
+
+    private Properties props(final boolean stateUpdaterEnabled) {
+        return props(mkObjectProperties(mkMap(mkEntry(StreamsConfig.InternalConfig.STATE_UPDATER_ENABLED, stateUpdaterEnabled))));
     }
 
     private Properties props(final Properties extraProperties) {
@@ -467,7 +392,6 @@ public class KafkaStreamsTelemetryIntegrationTest {
         streamsConfiguration.put(StreamsConfig.DEFAULT_KEY_SERDE_CLASS_CONFIG, Serdes.StringSerde.class);
         streamsConfiguration.put(StreamsConfig.DEFAULT_VALUE_SERDE_CLASS_CONFIG, Serdes.StringSerde.class);
         streamsConfiguration.put(StreamsConfig.DEFAULT_CLIENT_SUPPLIER_CONFIG, TestClientSupplier.class);
-        streamsConfiguration.put(StreamsConfig.InternalConfig.INTERNAL_CONSUMER_WRAPPER, TestConsumerWrapper.class);
         streamsConfiguration.put(ConsumerConfig.AUTO_OFFSET_RESET_CONFIG, "earliest");
         streamsConfiguration.putAll(extraProperties);
         return streamsConfiguration;
@@ -483,41 +407,8 @@ public class KafkaStreamsTelemetryIntegrationTest {
         return builder.build();
     }
 
-
-    private void addGlobalStore(final StreamsBuilder builder) {
-        builder.addGlobalStore(
-            Stores.keyValueStoreBuilder(
-                Stores.inMemoryKeyValueStore("iq-test-store"),
-                Serdes.String(),
-                Serdes.String()
-        ),
-                globalStoreTopic,
-                Consumed.with(Serdes.String(), Serdes.String()),
-                () -> new Processor<>() {
-
-                    // The store iterator is intentionally not closed here as it needs
-                    // to be open during the test, so the Streams app will emit the
-                    // org.apache.kafka.stream.state.oldest.iterator.open.since.ms metric
-                    // that is expected. So the globalStoreIterator is a global variable
-                    // (pun not intended), so it can be closed in the tearDown method.
-                    @SuppressWarnings("unchecked")
-                    @Override
-                    public void init(final ProcessorContext<Void, Void> context) {
-                        globalStoreIterator = ((KeyValueStore<String, String>) context.getStateStore("iq-test-store")).all();
-                    }
-
-                    @Override
-                    public void process(final Record<String, String> record) {
-                        // no-op
-                    }
-                });
-    }
-
-    private Topology simpleTopology(final boolean includeGlobalStore) {
+    private Topology simpleTopology() {
         final StreamsBuilder builder = new StreamsBuilder();
-        if (includeGlobalStore) {
-            addGlobalStore(builder);
-        }
         builder.stream(inputTopicOnePartition, Consumed.with(Serdes.String(), Serdes.String()))
                 .flatMapValues(value -> Arrays.asList(value.toLowerCase(Locale.getDefault()).split("\\W+")))
                 .to(outputTopicOnePartition, Produced.with(Serdes.String(), Serdes.String()));
@@ -546,7 +437,7 @@ public class KafkaStreamsTelemetryIntegrationTest {
 
         @Override
         public Consumer<byte[], byte[]> getGlobalConsumer(final Map<String, Object> config) {
-            return new TestingMetricsInterceptingConsumer<>(config, new ByteArrayDeserializer(), new ByteArrayDeserializer());
+            return new KafkaConsumer<>(config, new ByteArrayDeserializer(), new ByteArrayDeserializer());
         }
 
         @Override
@@ -558,23 +449,9 @@ public class KafkaStreamsTelemetryIntegrationTest {
         }
     }
 
-    public static class TestConsumerWrapper extends ConsumerWrapper {
-        @Override
-        public void wrapConsumer(final AsyncKafkaConsumer<byte[], byte[]> delegate, final Map<String, Object> config, final Optional<StreamsRebalanceData> streamsRebalanceData) {
-            final TestingMetricsInterceptingAsyncConsumer<byte[], byte[]> consumer = new TestingMetricsInterceptingAsyncConsumer<>(config, new ByteArrayDeserializer(), new ByteArrayDeserializer(), streamsRebalanceData);
-            INTERCEPTING_CONSUMERS.add(consumer);
+    public static class TestingMetricsInterceptingConsumer<K, V> extends KafkaConsumer<K, V> {
 
-            super.wrapConsumer(consumer, config, streamsRebalanceData);
-        }
-    }
-
-    public interface TestingMetricsInterceptor {
-        List<KafkaMetric> passedMetrics();
-        Map<MetricName, ? extends Metric> metrics();
-    }
-
-    public static class TestingMetricsInterceptingConsumer<K, V> extends KafkaConsumer<K, V> implements TestingMetricsInterceptor {
-        private final List<KafkaMetric> passedMetrics = new ArrayList<>();
+        public List<KafkaMetric> passedMetrics = new ArrayList<>();
 
         public TestingMetricsInterceptingConsumer(final Map<String, Object> configs, final Deserializer<K> keyDeserializer, final Deserializer<V> valueDeserializer) {
             super(configs, keyDeserializer, valueDeserializer);
@@ -590,48 +467,6 @@ public class KafkaStreamsTelemetryIntegrationTest {
         public void unregisterMetricFromSubscription(final KafkaMetric metric) {
             passedMetrics.remove(metric);
             super.unregisterMetricFromSubscription(metric);
-        }
-
-        @Override
-        public List<KafkaMetric> passedMetrics() {
-            return passedMetrics;
-        }
-    }
-
-    public static class TestingMetricsInterceptingAsyncConsumer<K, V> extends AsyncKafkaConsumer<K, V> implements TestingMetricsInterceptor {
-        private final List<KafkaMetric> passedMetrics = new ArrayList<>();
-
-        public TestingMetricsInterceptingAsyncConsumer(
-            final Map<String, Object> configs,
-            final Deserializer<K> keyDeserializer,
-            final Deserializer<V> valueDeserializer,
-            final Optional<StreamsRebalanceData> streamsRebalanceData
-        ) {
-            super(
-                new ConsumerConfig(
-                    ConsumerConfig.appendDeserializerToConfig(configs, keyDeserializer, valueDeserializer)
-                ),
-                keyDeserializer,
-                valueDeserializer,
-                streamsRebalanceData
-            );
-        }
-
-        @Override
-        public void registerMetricForSubscription(final KafkaMetric metric) {
-            passedMetrics.add(metric);
-            super.registerMetricForSubscription(metric);
-        }
-
-        @Override
-        public void unregisterMetricFromSubscription(final KafkaMetric metric) {
-            passedMetrics.remove(metric);
-            super.unregisterMetricFromSubscription(metric);
-        }
-
-        @Override
-        public List<KafkaMetric> passedMetrics() {
-            return passedMetrics;
         }
     }
 
@@ -678,7 +513,7 @@ public class KafkaStreamsTelemetryIntegrationTest {
                         .stream()
                         .flatMap(rm -> rm.getScopeMetricsList().stream())
                         .flatMap(sm -> sm.getMetricsList().stream())
-                        .map(org.apache.kafka.shaded.io.opentelemetry.proto.metrics.v1.Metric::getGauge)
+                        .map(metric -> metric.getGauge())
                         .flatMap(gauge -> gauge.getDataPointsList().stream())
                         .flatMap(numberDataPoint -> numberDataPoint.getAttributesList().stream())
                         .filter(keyValue -> keyValue.getKey().equals("process_id"))
@@ -692,9 +527,9 @@ public class KafkaStreamsTelemetryIntegrationTest {
                         .stream()
                         .flatMap(rm -> rm.getScopeMetricsList().stream())
                         .flatMap(sm -> sm.getMetricsList().stream())
-                        .map(org.apache.kafka.shaded.io.opentelemetry.proto.metrics.v1.Metric::getName)
+                        .map(metric -> metric.getName())
                         .sorted()
-                        .toList();
+                        .collect(Collectors.toList());
                 LOG.info("Found metrics {} for clientId={}", metricNames, clientId);
                 SUBSCRIBED_METRICS.put(clientId, metricNames);
             } catch (final Exception e) {
