@@ -16,6 +16,7 @@
  */
 package org.apache.kafka.common.test.junit;
 
+import kafka.network.SocketServer;
 import kafka.server.BrokerServer;
 import kafka.server.ControllerServer;
 import kafka.server.KafkaBroker;
@@ -24,6 +25,7 @@ import org.apache.kafka.common.network.ListenerName;
 import org.apache.kafka.common.test.ClusterInstance;
 import org.apache.kafka.common.test.KafkaClusterTestKit;
 import org.apache.kafka.common.test.TestKitNodes;
+import org.apache.kafka.common.test.TestUtils;
 import org.apache.kafka.common.test.api.ClusterConfig;
 import org.apache.kafka.common.test.api.Type;
 import org.apache.kafka.common.utils.Utils;
@@ -36,10 +38,12 @@ import org.apache.kafka.server.common.MetadataVersion;
 import org.apache.kafka.server.fault.FaultHandlerException;
 
 import org.junit.jupiter.api.extension.AfterTestExecutionCallback;
-import org.junit.jupiter.api.extension.BeforeEachCallback;
+import org.junit.jupiter.api.extension.BeforeTestExecutionCallback;
 import org.junit.jupiter.api.extension.Extension;
 import org.junit.jupiter.api.extension.TestTemplateInvocationContext;
 
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -47,10 +51,12 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.ExecutionException;
-import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import scala.jdk.javaapi.OptionConverters;
+
 
 /**
  * Wraps a {@link KafkaClusterTestKit} inside lifecycle methods for a test invocation. Each instance of this
@@ -69,35 +75,6 @@ public class RaftClusterInvocationContext implements TestTemplateInvocationConte
     private final ClusterConfig clusterConfig;
     private final boolean isCombined;
 
-    /**
-     * Wait for condition to be met for at most 15 seconds and throw assertion failure otherwise.
-     * This should be used instead of {@code Thread.sleep} whenever possible as it allows a longer timeout to be used
-     * without unnecessarily increasing test time (as the condition is checked frequently). The longer timeout is needed to
-     * avoid transient failures due to slow or overloaded machines.
-     */
-    static void waitForCondition(final java.util.function.Supplier<Boolean> testCondition,
-                                        final String conditionDetails) throws InterruptedException {
-        var maxWaitMs = 15_000L;
-        long endTime = System.currentTimeMillis() + maxWaitMs;
-
-        while (System.currentTimeMillis() < endTime) {
-            try {
-                if (testCondition.get()) {
-                    return;
-                }
-            } catch (Exception e) {
-                if (System.currentTimeMillis() >= endTime) {
-                    throw new AssertionError(String.format("Assertion failed with an exception after %s ms", maxWaitMs), e);
-                }
-            }
-
-            if (System.currentTimeMillis() < endTime) {
-                TimeUnit.MILLISECONDS.sleep(100);
-            }
-        }
-        throw new AssertionError("Condition not met: " + conditionDetails);
-    }
-
     public RaftClusterInvocationContext(String baseDisplayName, ClusterConfig clusterConfig, boolean isCombined) {
         this.baseDisplayName = baseDisplayName;
         this.clusterConfig = clusterConfig;
@@ -112,8 +89,8 @@ public class RaftClusterInvocationContext implements TestTemplateInvocationConte
     @Override
     public List<Extension> getAdditionalExtensions() {
         RaftClusterInstance clusterInstance = new RaftClusterInstance(clusterConfig, isCombined);
-        return List.of(
-                (BeforeEachCallback) context -> {
+        return Arrays.asList(
+                (BeforeTestExecutionCallback) context -> {
                     clusterInstance.format();
                     if (clusterConfig.isAutoStart()) {
                         clusterInstance.start();
@@ -156,16 +133,18 @@ public class RaftClusterInvocationContext implements TestTemplateInvocationConte
         }
 
         @Override
-        public ListenerName controllerListenerName() {
-            return new ListenerName(
-                controllers()
-                    .values()
-                    .iterator()
-                    .next()
-                    .config()
-                    .controllerListenerNames()
-                    .get(0)
-            );
+        public Optional<ListenerName> controllerListenerName() {
+            return controllers().values().stream()
+                    .findAny()
+                    .flatMap(s -> OptionConverters.toJava(s.config().controllerListenerNames().headOption()))
+                    .map(ListenerName::new);
+        }
+
+        @Override
+        public Collection<SocketServer> controllerSocketServers() {
+            return controllers().values().stream()
+                .map(ControllerServer::socketServer)
+                .collect(Collectors.toList());
         }
 
         @Override
@@ -200,7 +179,7 @@ public class RaftClusterInvocationContext implements TestTemplateInvocationConte
                 format();
                 if (started.compareAndSet(false, true)) {
                     clusterTestKit.startup();
-                    waitForCondition(
+                    TestUtils.waitForCondition(
                             () -> this.clusterTestKit.brokers().values().stream().allMatch(
                                     brokers -> brokers.brokerState() == BrokerState.RUNNING
                             ), "Broker never made it to RUNNING state.");
@@ -211,20 +190,10 @@ public class RaftClusterInvocationContext implements TestTemplateInvocationConte
         }
 
         @Override
-        public boolean started() {
-            return started.get();
-        }
-
-        @Override
         public void stop() {
             if (stopped.compareAndSet(false, true)) {
                 Utils.closeQuietly(clusterTestKit, "cluster");
             }
-        }
-
-        @Override
-        public boolean stopped() {
-            return stopped.get();
         }
 
         @Override
