@@ -22,6 +22,7 @@ import org.apache.kafka.trogdor.common.JsonUtil;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 
@@ -111,6 +112,6 @@ public abstract class TaskSpec {
     }
 
     protected static Map<String, String> configOrEmptyMap(Map<String, String> config) {
-        return config == null ? Map.of() : config;
+        return (config == null) ? Collections.emptyMap() : config;
     }
 }
