@@ -24,6 +24,7 @@ import com.fasterxml.jackson.annotation.JsonAnyGetter;
 import com.fasterxml.jackson.annotation.JsonAnySetter;
 import com.fasterxml.jackson.annotation.JsonCreator;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -67,7 +68,9 @@ public class TopicsSpec extends Message {
     }
 
     public TopicsSpec immutableCopy() {
-        return new TopicsSpec(Map.copyOf(map));
+        HashMap<String, PartitionsSpec> mapCopy = new HashMap<>();
+        mapCopy.putAll(map);
+        return new TopicsSpec(Collections.unmodifiableMap(mapCopy));
     }
 
     /**
